--- a/John Hexa/“纪实”.md
+++ b/John Hexa/“纪实”.md
@@ -3,8 +3,8 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links:
-Tags:  #家族Clan #家族Clan #第一性Feminism
+Links: [[进化心理学]] [[道德]] [[真正善良]] [[善良与现实]] [[何为客观]] [[世界史]] [[三观可塑期]] [[何为有用]] [[反弹琵琶]] [[敌人]] [[怎样读新闻]] [[新闻价值]] 
+Tags: #家族Clan #第一性Feminism #一法通万法通SthOfEverything 
 
 
 
