--- a/John Hexa/光棍问题.md
+++ b/John Hexa/光棍问题.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links:
+Links: [[农村出身]] [[农村男性的出路]] [[农村的未来]]
 Tags:  #社科Social-Science #第一性Feminism
 
 
