--- a/John Hexa/射鸟.md
+++ b/John Hexa/射鸟.md
@@ -4,7 +4,7 @@
 > Author: #JohnHexa
 Last update: *23/07/2021* 
 Links: [[弓禁]]
-Tags: #军事技术与艺术MilitaryTechAndArt/冷兵器Melee-Weapon #教育Education 
+Tags: #科学与技术ScienceAndTech/古代发明Historical-Invention #教育Education 
 
  
 从目前的法律上讲，虐杀城市流浪猫的确是不违法。
