--- a/John Hexa/施里芬计划.md
+++ b/John Hexa/施里芬计划.md
@@ -4,7 +4,7 @@
 > Author: #JohnHexa
 Last update: *23/07/2021* 
 Links:
-Tags: #军事技术与艺术MilitaryTechAndArt/冷兵器Melee-Weapon #科学与技术ScienceAndTech 
+Tags: #科学与技术ScienceAndTech/古代发明Historical-Invention #科学与技术ScienceAndTech 
 
  
 山地师的主要装备是直升机。
