--- a/John Hexa/疑神疑鬼.md
+++ b/John Hexa/疑神疑鬼.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *14/08/2021* 
-Links: [[恐惧]] 
+Links: [[John Hexa/恐惧]] 
 Tags: #社科Social-Science #人性与心理HumanityAndPsychology 
   
 
