--- a/John Hexa/聪明误.md
+++ b/John Hexa/聪明误.md
@@ -3,8 +3,8 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links:
-Tags:  #家族Clan #家族Clan #第一性Feminism
+Links: [[聪明的境界]]
+Tags:  #家族Clan #第一性Feminism #人生管理Life-Management 
 
 
 
