--- a/John Hexa/越人学远射.md
+++ b/John Hexa/越人学远射.md
@@ -4,7 +4,7 @@
 > Author: #JohnHexa
 Last update: *25/07/2021* 
 Links: [[弓禁]]
-Tags: #文化艺术Art #军事技术与艺术MilitaryTechAndArt/冷兵器Melee-Weapon 
+Tags: #文化艺术Art #科学与技术ScienceAndTech/古代发明Historical-Invention 
 
 
 > 越人学远射，参天而发，适在五步之内，不易仪也。世已变矣，而守其故，譬犹越人之射也。
