--- a/Nell Nell/不幼稚.md
+++ b/Nell Nell/不幼稚.md
@@ -2,110 +2,90 @@
 [男性怎样不算「幼稚」？](https://www.zhihu.com/question/45730566/answer/1471565993)
 
 > Author: #NellNell 
-Last update: *20/08/2021* 
-Links:
-Tags: 
-
-
+Last update: *01/09/2021* 
+Links: [[幼稚女生]] [[不幼稚 - 之一]] [[不幼稚 - 之二]] [[女性的幼稚]]
+Tags: #社科Social-Science #人性与心理HumanityAndPsychology #亲密关系Intimate-Relationship 
   
 
-等性欲减弱的时候吧。
-
-这不是抖机灵。而是在今天所谓的男性「幼稚病」确实有其**生物学基础**。
-
-男性身上相对于女性高得多的**雄性激素**（androgen）特别是**睾酮**（Testosterone）的分泌水平，不仅在胚胎和青春期促进生殖器官和第二性征的发育，同时也会影响一系列的性格特征，比如**易怒、急躁、粗心、言语粗暴、挑衅、冲动、暴力、喜欢竞争、主导、发号施令等**。
-
-你仔细看这里面每一项，是不是都是典型的「幼稚病」行为？
-
-只不过我们今天看来的「幼稚病」，在原始社会其实是起到了**物种繁衍和延续**的重要作用。
-
-在包括人类在内的动物世界，所有的社会型动物中的雄性都会在发情期更具攻击性。这种特征让更加强壮和勇猛的动物获得更大的交配权，从而达到繁衍优化物种的结果。
-
-雄性的**性行为与攻击性**是一个硬币的两面，它们在大脑里被激活的区域都是一样的，都是被下丘脑攻击区域控制。如果频繁电击这一区域，会不可抑制的引起性冲动和暴力倾向。
-
-今天人类虽然进化到了现代社会，但是身体里的原始冲动却没有太大变化。
-
-研究发现暴力倾向越严重的人，比如暴力和性侵犯罪的男性，身体中的睾酮要比一般男性高。并且在参与和观看激烈对抗性比赛中，男性的睾酮水平会增长。在与虚假对手对抗、争夺掌控权、和赢过对方时睾酮水平也会大幅增长。[1](#ref_1)
-
-当然大部分男性在社会化的过程中逐渐学会控制自己的暴力和冲动本能，但由于雄性激素的影响，男性所表现出来的性格特征确实更适合原始森林中的野外求生场景。
-
-这些性格特征曾在恶劣的自然环境和竞争激烈的社会环境中保护了男性，一直遗传到了现代社会。
-
-只不过现代社会和平安逸的环境、以及不同的择偶方法，让这些原始冲动看起来落伍了而已。
-
-它们在过去叫做「大展雄风」，在今天就叫做「幼稚病」了。
+等性欲减弱的时候吧。（狗头
 
 ---
 
-那么有没有办法摆脱「幼稚病」呢？
+调侃归调侃。
 
-要分情况。
+但是今天所谓的男性「幼稚病」，确实有其生物学基础。
 
-我们现在说的「幼稚」绝大部分出自男性的**生理特质**，而这些特质在某一历史阶段起到过积极的作用，那么在那个时候就不能算幼稚。
+男性身上相对于女性具有高得多的雄性激素（androgen）特别是睾酮（Testosterone）的分泌水平，这的确会造成一部分的性格特征，比如易怒、急躁、粗心、言语粗暴、挑衅、冲动、暴力、竞争、主导、发号施令……
 
-所以「幼稚」的定义随着时代的改变而改变。
+你仔细看这里面的每一项，是不是都是「幼稚病」的特征？
+
+小心哦，这是一个比较tricky的问题。
 
   
 
   
 
-我们先来笼统的定义一下什么是「幼稚」。
+  
 
-**—— 「幼稚」就是会伤害到个体在特定自然社会环境中生存和繁衍的行为特质。「成熟」便是相对于「幼稚」而言，有利于个体生存和发展的行为特质。**
+答案是：是也不是。
 
-基于这个定义，就可以避开**绝对化**的陷阱了。
+是，因为这些男性特征客观存在。不是，因为在不同的时代和环境，这些并不总被看作是「幼稚」。
 
-什么是绝对化？就是不分语境、不分场合的宣告某一行为就是幼稚，某种性格就是不成熟，喜欢竞争和刺激就是不好的，男人永远都是小孩子……
+---
 
-这种宣告往往是负气而言，对帮助一个人摆脱幼稚于事无补。因为要判断一个特质是否有利于生存与发展，首先要考虑他的**生活环境和生活场景**。
+我们先来定义一下什么是「幼稚」。
 
-比如在文明早期，成熟的标志可能就是男性独自猎捕一只雄鹿，或者成功抢夺敌方部落的女人为妻。
+**「幼稚」，就是会限制个体在特定环境中生存和发展机会的行为特质。「成熟」，是相对于「幼稚」而言，有利于其生存和发展的行为特质。**
 
-但是随着生存方式的改变，乡村城邦的建立，社会关系的日益复杂化，**成熟的标志**也随之改变了。
+基于这个定义，就可以避开**绝对化**的陷阱。
 
-在人口密度高、层级分化多样的环境下，雄激素支配的性冲动和攻击性带来的**生存障碍**远超过**生存优势**。
+什么是绝对化？
 
-小规模的部落环境，可以依赖武力和强势为自己和族群获得更多的生存资源，保护族人免受外敌入侵，从而赢得最多的尊敬和服从。
+就是不分语境、不分场合地宣告某一价值判断：某一行为**就是**幼稚，某种性格**就是**不成熟，喜欢竞争和刺激**总是**不好，男人**永远**都是小孩子……
 
-但在城邦文明，农耕取代了捕猎，劳动分工更加细化，专业性知识逐渐被少数人所拥有，统治方式也不再是简单的武力威慑，而是越来越依赖于复杂的行政部门和规训手段。
+就是……总是……永远……
+
+这就是绝对化。
+
+然而别说古代，就是近代几百年，人类对道德和价值的评判也不知变了多少茬了。
+
+**什么叫成熟，什么叫幼稚，首先要考虑的，是他的历史语境和生活场景。**
+
+比如在文明早期，成熟的标志可能就是男性独自猎捕一只雄鹿，或者成功抢夺敌方部落的女人。
+
+但自打人类进入城邦文明，农耕取代了捕猎，劳动分工更加细化，资源和知识被少数人拥有，树立威望的方式就不再是简单地仰仗武力，而是越来越依赖于通过专业知识和人力管理所获取的社会与文化资本。
 
 **这种情况下，一个男性成熟的标志就不再取决于捕猎和抢妻，而是如何将“捕猎和抢妻”的原始冲动转化为更适合当下社会生产环境的“新”特质。**
 
-  
+比如“竞争性”这一特质，在狩猎采集时代，表现出来的“成熟”，就是面对猎物时的勇敢、矫健和刚毅。男性可以比女性更长时间地追逐猎物、更有力量与猛禽搏斗、以及更享受对猎物的征服。
+
+那么在当下，“竞争性”会驱动什么样的成熟？
 
   
 
-说是“**新**”，实际上它背后是一样的**生理基础**，只是需要在现代的劳动生产和社会生活中以“**翻新**”的方式表现出来。
+  
 
-比如“**竞争**”这一特质，男性在雄激素的影响下比女性更喜欢激烈对抗并从中获得快感。
+**就是把过去追野兽的精力拿来学习啊。**
 
-这在狩猎采集时代，表现出来就是面对猎物的勇敢、矫健和毅力。男性可以比女性更长时间的承受追逐猎物、更有力量与猛禽搏斗的、以及更享受对猎物的征服。
+头悬梁锥刺股，你以为在那一方三尺的书桌前，所展现出来的勇气、毅力、和无畏就比在大草原上奔跑少吗？
 
-那么在当下社会，同样的生理基础，怎样在**新的领域翻新**这些特质呢？
+一点也不。
 
-比如**学习上的竞争力**。就是把过去追野兽的精力拿来学习，头悬梁锥刺股，虽然不在野外奔跑，但你以为在自己那一方三尺的书桌前，对勇气、毅力、无畏的要求就比那在大草原上奔跑的时候少吗？
-
-一样的。
-
-你以为那种生活充满激情，那是因为没让你天天出去为了追一头熊追一礼拜。
-
-现在你就把你的书桌当作草原，手中的笔当作弓箭，眼前的习题就是一头头等着你猎杀的熊。
+当你把书桌当作草原，手中的笔当作弓箭，眼前的习题就是一头头等待猎杀的猎物，
 
 ——体会一下。
 
-一样可以充满激情。
+同样热血沸腾，激情拉满不是吗？
 
-  
+---
 
-  
+**因此，“幼稚”之所以幼稚，并非它们本身就是原罪，而是在已经改变了的客观条件下，人却没有跟着改变。**
 
-**“幼稚”之所以幼稚，并非它们本身就是原罪，而是在已经改变了的客观条件下，没有把它们用对地方。**
-
-在过去有利于生存和发展的“使用方式”，到今天很可能就有害无益了。
+**——固步自封、保守成见就是幼稚。**
 
 想想你上次什么时候被人说过“幼稚”？
 
-这里我必须要引用一下
+引用一下
 
 [@张近微]
 
@@ -113,31 +93,68 @@ Tags:
 
 > 说到男人，我不得不讲下我最近的一项发现。这个发现就是：男人间长年盛行一种讲话方式，我起了个带弗洛伊德意味的英语专名，叫who-pees-further conversation，直译可译成“比谁尿得远”式谈话。在这种谈话里，谈话者是都一步不许让的，在气势和信心上是分厘必争的，否则便有阳痿去雄之虞。它的原型可追溯到小便池里的男性鏖战，如果大雄尿得比我胖虎远，我胖虎就一定要提气抬胯，尿远一寸。你一寸，我一寸，共同进步，内卷到底。出了厕所，这种隐秘的心理还要延伸到别的事情上：“我是你爸爸。”“不孝儿。”“快叫爸爸。”这是一种比尿远式谈话。“我好帅。”“还是爸爸我比较帅。”这是另一种比尿远式谈话。对于增肌的爱好，是一种比尿远式行为。
 
-仔细想想这种行为为什么幼稚？
+  
 
-是尿尿本身幼稚吗？是争强好胜幼稚吗？是竞争比赛幼稚吗？
+幼稚吗？
+
+为什么？
+
+是尿尿本身幼稚吗？是比赛幼稚吗？是好胜幼稚吗？
 
 **不是。**
 
-**是这三样东西加在一起、对你在当今这个社会生存和发展、在经济和社会上获得独立和自主完全不够成正面效应。所以幼稚**！
+**是这三样东西加在一起、对你在当今这个社会的立足和发展、独立和自主完全不够成正面效应。所以幼稚**！
 
-如果有人批评你幼稚，虽然他们大概自己也没多想，但你要知道，人都有趋利避害的本能，生来就会对不利于自身生存发展的人和事抱有天然的反感。
+You can have fun, but it's immature。
+
+有人批评你幼稚，不是对你个人有什么特别的偏见，而是ta会对不利于自身处境的人或事抱有莫名的提防。
 
 他们说你幼稚，其实是隐含了一种**与你在一起大概率会被你连累的担忧。**
 
-你的行为不仅伤害了自己的生存和发展，也难免会给周围的人带来负累。因为你不愿意负重前进，必然就要由旁边的人帮你负重。说你幼稚，实际上是说**你的行为给对方带来了负担**。
+你的行为不仅限制了自己的生存和发展的机会，也难免会给周围的人带来负累。因为你不愿意负重前行，那么你身边的人就要帮你负重。说你幼稚，实际上是说你的行为给对方带来了负担。
 
 小孩子可以幼稚，因为他们不需要独立。幼稚是小孩子的特权。
 
-**但成年人不需要、也不应该再依附于他人，如果你的行为让人感觉你没办法在这个社会立足、不能很好的生存和发展、无法获得独立和自主，就会被看作幼稚**。
+但成年人不需要、也不应该再依附于他人，如果你的行为让人感觉你没办法在这个社会立足、不能很好的发展、无法获得独立和自主，就会被看作幼稚。
+
+---
 
 所以回到原问题，男性怎样不算幼稚？
 
-不是要否认生理性的男性特质，也不是要压抑雄激素带来的冲动、好奇、勇敢、攻击和控制行为，而是要引导这些特质和行为并将其重新纳入到现代的生产劳动和社会关系中 —— **该冲动的时候冲动，该勇敢的时候勇敢，该攻击的时候攻击，该领导的时候领导**。
+要回到时代中来。
 
-（待续）
+不要否认、也不要压抑雄激素带来的冲动、好奇、勇敢、攻击和控制等男性特质，但要引导并将这些特质纳入到现代的生产劳动和社会关系中，
 
+—— **该冲动的时候冲动，该勇敢的时候勇敢，该出手的时候出手，该带领的时候带领**。
 
-## 参考
+作为一个现代男性，捕猎和抢妻肯定是行不通了，就不要想着在“捕猎和抢妻”的类似场景中展现男子气概了。
 
-1.  [^](https://www.zhihu.com/people/nell/answers?page=13#ref_1_0)Testosterone and Aggressive Behavior in Man in nt J Endocrinol Metab. 2012 Summer; 10(3): 563–568.
+**现代社会的发展，会是越来越包容与合一，理解与共情的趋势。**
+
+你可以看到今天人们普遍认可与普遍批判的东西与2、30年前有多大的不同。割裂与霸权越来越没有立场，合作与共赢越来越成为共识。对立和冲突当然也有。这正因为多元价值观挑战单一价值观，才会产生那些反弹。但这只是临产前的阵痛罢了。
+
+因此，在不远的将来，成熟的标志会再一次发生改变。
+
+这一次，什么是成熟？
+
+假设这个世界的确按照我所预测的方向发展，那么成熟与否就不再看一个人占有了多少资源，而要看他分享了多少资源；他占有和剥削别人的能力，会让位给共情与理解、创造和平的能力；个人拥有多少财富不再重要，为社会和他人创造和贡献财富才是进入成年人世界的基本要求。
+
+所有对抗性的特质都会将箭头从他人转向自身，彼此之间的竞争转而成为自己与自己的竞争。所有生产性的特质会被用来促进群体成员之间的合作与协助。
+
+而那些利用别人的软弱满足自己的私欲的行为会被认为还没长大，没有进入成年人世界的资格。
+
+简而言之，就是你的行为是不是符合世界和他人的预期。符合了就不算为幼稚。不符合就算为幼稚。
+
+也就是说，
+
+**——与世界统一，与他人合一。**
+
+无论在哪个时空，能够做到这两点，就不算为幼稚。
+
+---
+
+  
+
+**相关阅读：**
+
+[一个有教养的男孩子是怎么样的？](https://www.zhihu.com/question/288381809/answer/681425360)
