--- a/Nell Nell/天人合一.md
+++ b/Nell Nell/天人合一.md
@@ -1,9 +1,10 @@
 # 天人合一
+[_冥冥之中_是否真的有“天”为我们安排一切？](https://www.zhihu.com/question/460931680/answer/1902340926)
 
 > Author: #NellNell 
 Last update: *4/07/2021* 
-Links: [[爱 - Caritas]]
-Tags: #人生管理Life-Management #爱Caritas #神学Theology 
+Links: [[爱 - Caritas]] [[Nell Nell/终极目标]] [[无常]] [[悲观与乐观]] [[做计划]]
+Tags: #人生管理Life-Management #爱Caritas #神学Theology #一法通万法通SthOfEverything 
 
 你好幸运。
 
