--- a/John Hexa/中国刀.md
+++ b/John Hexa/中国刀.md
@@ -4,7 +4,7 @@
 > Author: #JohnHexa
 Last update: *23/07/2021* 
 Links: [[日本刀]] [[重剑]] [[神兵利器]]
-Tags:  #军事技术与艺术MilitaryTechAndArt/冷兵器Melee-Weapon 
+Tags:  #科学与技术ScienceAndTech/古代发明Historical-Invention 
 
 
 中国是以文官政治和惊人早熟的官僚制度作为立身之本，又不是以军功贵族为立身之本。
