--- a/John Hexa/人性本质.md
+++ b/John Hexa/人性本质.md
@@ -3,8 +3,9 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links:
-Tags:  #家族Clan
+Links: [[人吃人]] [[无条件的爱]] [[爱 - Caritas]] [[被讨厌]] [[“纪实”]] [[进化心理学]] [[真正的恶]] [[真正善良]]
+Tags:  #家族Clan #人性与心理HumanityAndPsychology 
+沙海拾金： [[人类共性.JPEG]] [[人类共性1.JPEG]] [[人类共性2]]
 
 
 你当然是你所讨厌的那种人，这个不用问。
