--- a/John Hexa/传统剑术.md
+++ b/John Hexa/传统剑术.md
@@ -4,7 +4,7 @@
 > Author: #JohnHexa
 Last update: *23/07/2021* 
 Links: [[重剑]] [[功夫]] [[和弓]]
-Tags: #军事技术与艺术MilitaryTechAndArt/冷兵器Melee-Weapon #中国China/历史History 
+Tags: #科学与技术ScienceAndTech/古代发明Historical-Invention #中国China/历史History 
 
  
 剑道比赛和剑道是两码事。
