--- a/John Hexa/弓箭威力.md
+++ b/John Hexa/弓箭威力.md
@@ -4,7 +4,7 @@
 > Author: #JohnHexa
 Last update: *23/07/2021* 
 Links:  [[弓箭瞄准]] [[和弓]] [[甩手箭]] [[空放]] [[高空射箭]] [[越人学远射]]
-Tags: #科学与技术ScienceAndTech #军事技术与艺术MilitaryTechAndArt/冷兵器Melee-Weapon 
+Tags: #科学与技术ScienceAndTech #科学与技术ScienceAndTech/古代发明Historical-Invention 
 
  
 弓箭的杀伤力，要从原理说起。
