--- a/John Hexa/弓箭瞄准.md
+++ b/John Hexa/弓箭瞄准.md
@@ -4,7 +4,7 @@
 > Author: #JohnHexa
 Last update: *23/07/2021* 
 Links:  [[弓禁]] [[和弓]]
-Tags: #科学与技术ScienceAndTech #军事技术与艺术MilitaryTechAndArt/冷兵器Melee-Weapon 
+Tags: #科学与技术ScienceAndTech #科学与技术ScienceAndTech/古代发明Historical-Invention 
 
  
 传统弓不太好多说。不过有一条要害是这样的：
