--- a/John Hexa/打掉飞箭.md
+++ b/John Hexa/打掉飞箭.md
@@ -4,7 +4,7 @@
 > Author: #JohnHexa
 Last update: *23/07/2021* 
 Links:  [[弓禁]] [[弓箭瞄准]] [[弓箭威力]] [[越人学远射]] 
-Tags: #科学与技术ScienceAndTech  #军事技术与艺术MilitaryTechAndArt/冷兵器Melee-Weapon 
+Tags: #科学与技术ScienceAndTech  #科学与技术ScienceAndTech/古代发明Historical-Invention 
 
  
 答案是——基本上不能。
