--- a/John Hexa/日本陆军.md
+++ b/John Hexa/日本陆军.md
@@ -4,7 +4,7 @@
 > Author: #JohnHexa
 Last update: *23/07/2021* 
 Links:
-Tags: #军事技术与艺术MilitaryTechAndArt/冷兵器Melee-Weapon #社科Social-Science 
+Tags: #科学与技术ScienceAndTech/古代发明Historical-Invention #社科Social-Science 
 
  
 日军要不是单兵素质高，以军部这群发着白日梦做战略的浑人的水平，怕是会早好几年玩脱。
