--- a/John Hexa/表态反对.md
+++ b/John Hexa/表态反对.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links:
+Links: [[美国之音]] [[反弹琵琶]] [[新闻价值]] [[怎样读新闻]] [[何为客观]] 
 Tags: #社科Social-Science #世界大局World-Trend #人性与心理HumanityAndPsychology 
 
  
