--- a/John Hexa/迫降.md
+++ b/John Hexa/迫降.md
@@ -4,7 +4,7 @@
 > Author: #JohnHexa
 Last update: *23/07/2021* 
 Links:
-Tags: #军事技术与艺术MilitaryTechAndArt/冷兵器Melee-Weapon 
+Tags: #科学与技术ScienceAndTech/古代发明Historical-Invention 
 
  
 现在会禁止降落，让飞行员弹射，派出直升机打捞。
