--- a/John Hexa/高空射箭.md
+++ b/John Hexa/高空射箭.md
@@ -4,7 +4,7 @@
 > Author: #JohnHexa
 Last update: *23/07/2021* 
 Links:
-Tags: #社科Social-Science #军事技术与艺术MilitaryTechAndArt/冷兵器Melee-Weapon 
+Tags: #社科Social-Science #科学与技术ScienceAndTech/古代发明Historical-Invention 
 
  
 除了在专业场馆、正规狩猎区、一眼望到天边见不到人的荒漠、以及真正的战争中或者为了野外求生，
