--- a/Nell Nell/亲人病重.md
+++ b/Nell Nell/亲人病重.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *17/07/2021* 
-Links: [[恐惧]] [[克服恐惧]] [[爱 - Caritas]]
+Links: [[John Hexa/恐惧]] [[克服恐惧]] [[爱 - Caritas]]
 Tags: #爱Caritas 
 
 面对亲人的病重，我只说一点，就是尽可能让ta获得平安。
