--- a/Nell Nell/共事.md
+++ b/Nell Nell/共事.md
@@ -1,47 +1,28 @@
 # 共事
-*两个注定走不到一起的人，命运为什么会安排他们相遇？*
+[假如你没有遇到喜欢你的人，你在乎的人不在乎你，你要靠什么生活下去？](https://www.zhihu.com/question/313241934/answer/619389760)
 
 > Author: #NellNell 
-Last update: *10/07/2021* 
-Links: [[如何活]] [[共事 1]] [[走到一起]] 
-Tags: #爱Caritas #人生管理Life-Management #教育Education 
+Last update: *25/08/2021* 
+Links: [[走到一起]] [[幸福]] [[幸福的能力]] [[理想婚姻]] [[婚姻的意义]] [[共事]]
+Tags: #亲密关系Intimate-Relationship #人生管理Life-Management 
+
+我想你的眼睛太过于定睛在【人】上了。
+
+在人生漫长的岁月中，你会发现，我们最好的友人，往往是在一起共事一件【事】的时候发现、结交、再深入发展来的。这当然也包括伴侣。
+
+与其整天想着到哪里去寻找喜欢的人、在乎的人怎么不在乎自己，不如认真想一下自己到底应该做什么、对什么事有想要认真完成的愿望，什么事有意义、令你每天不虚度，什么事对人和社会产生正面影响、让你成为一个对这个世界有益的人。
+
+这不是说漂亮话。
+
+这就好像我们都在一个长跑比赛中奔跑，你要做的不是始终盯着你周围的选手，那样的话你跑不了多远就会灰心丧气，你会远远落后于其他人（这里面很有可能就包括你喜欢的人）。
+
+你要做的是找到你的节奏，坚定你的步伐，向着标杆直跑，尽心尽力做好你该做的事，跑好你当跑的路。
+
+慢慢你会发现，有一些人始终出现在你的身边，和你不相上下的跑着。累的时候，彼此鼓励，受伤的时候，彼此搀扶，跌倒的时候，彼此扶持。
+
+这些人，就是和你有着一样目标、一样节奏，怀着一样的激情在奔跑的人。这些人肯定不会很多，**但有几个这样共同奔跑的朋友足矣，有一个这样目标一致的伴侣就是大幸。**
+
+  
   
 
-**不要盯住人，要盯住事。**
 
-人与人之间长久的关系，不是你喜欢我我喜欢你、你对我好我对你好。不是说那些不好，只是那些本身就不具备可持续性，因为它们依赖的是人，而人又是极不可靠的。
-
-**真正能赋予关系可持续性的，是在一起【共事】。**
-
-一份客观存在的事业、一个共同奔赴的目标、一些需要彼此扶持的使命，这些都比寄托于一个个体变化多端的情绪喜好来得更稳妥。
-
-共事的意思不是说一定要做同一个工作，而是在更深更本质的层面上，你们做的是**同一件事**，而且真心认可那件事的意义。
-
-比如医生和护士。
-
-医生为什么很大几率找护士？因为本质上他们做的是同一件救死扶伤的事，更容易彼此理解、接纳。
-
-再比如党员和基督徒。很不可思议的组合吧？但不是随随便便名义上的党员和基督徒，而是真正认可他们所信奉和所追求的，本质上都是爱人和服事人，那么在一起也比较能够互相理解和扶持。
-
-做同一件事，也可以让你们有很大几率相遇并被彼此吸引。
-
-因为真正知道自己在做什么的人总是少数，这就自然而然形成了某种筛选机制。你遇到ta而不是别人，因为追求精进的路是一条越来越窄的路，路上的人也少，看到彼此的几率也会更大。
-
-所以要遇到合适的人，就要多去与那些与你价值观一致的地方，不要在违背你价值观的地方认识人。
-
-比如被朋友拉去夜店，但你本身不是喜欢夜生活的人，就不要在夜店结识人，无论偶遇多么浪漫，也不要给自己找麻烦。
-
-遇到可以共事的人，是极大的幸运。
-
-而且因为你们拥有同一个信念和目的，即便不能相守，你们也是与彼此同在的。
-
-知道在世界某一个角落，有某一个人，在做着与你同样的事，即便不能在一起生活，心里也是踏实的，也是有安慰的。
-
-什么是走到一起？
-
-这就是走到一起。
-
----
-
-
-[假如你没有遇到喜欢你的人，你在乎的人不在乎你，你要靠什么生活下去？​www.zhihu.com![图标](https://zhstatic.zhihu.com/assets/zhihu/editor/zhihu-card-default.svg)](https://www.zhihu.com/question/313241934/answer/619389760)
