--- a/Nell Nell/社会&心理&人类学的区别.md
+++ b/Nell Nell/社会&心理&人类学的区别.md
@@ -3,64 +3,139 @@
 
 
 > Author: #NellNell 
-Last update: *20/08/2021* 
+Last update: *01/09/2021* 
 Links:
 Tags: 
 
   
 
-在
+好吧，把这个坑填完。
 
-[@列斐伏尔]
+社会学、心理学、人类学都是以理解人类社会、心理、实践为诉求的社会科学学科。
 
-的回答上再补充几点。
+**他们的主要不同在于，社会学认为“社会病了”，心理学认为“人病了”，人类学是“我病了”。**
 
-很多人把社会学和人类学搞混，那是因为在我国，人类学就是和社会学混着的，如果不是和社会学混，就是和民族学、或是民俗学混，所以也不能怪很多人分不清它们。
+为什么都是病了？
 
-但是在西方，社会学和人类学的区别还是非常清楚的。
+因为社会科学是在工业革命和去宗教化强烈冲击西方震荡下的产物，是“神学”的平民化替代品。
 
-  
+一方面社会巨变带来诸多问题，另一方面上帝的权威性逐渐瓦解。过去是“世人都犯了罪”，现在是“世人都病了”。
 
--   **诞生**
+**将“有病”代替“有罪”，这就是社会科学诞生的基础。**
 
-社会学诞生于19世纪工业革命，伴随着工业生产和城市化的发展、以及社会巨变造成的各种社会问题，西方学者希望借助**「科学」的手段**了解人类社会和人类行为的机制。
+---
 
-研究手段是借鉴**自然科学**的研究方式，这是基于社会学家认为，人类社会应该和自然世界一样，具有可以发现的**规律和法则**，通过研究这些规律和法则来解决人类社会的问题、指导人类获得福祉。因此在方法论上，相当程度上依赖于**定量分析**，就是为了尽可能**「客观和正确」**的获得对于人类社会和行为的描述，并以此获得在**「科学」**领域的一席之地。
+社会学和心理学先后诞生于19世纪工业革命早期和晚期。
 
-人类学则不同。
+伴随着工业化和城市化的发展，面对社会巨变造成的各种社会和心理问题，西方人第一次将“神学”抛诸脑后，决定不再用“上帝”来解释和解决这些问题，取而代之的是借助启蒙运动以来快速发展的**「自然科学」，**帮助他们进行自我诊断和医治。
 
-人类学诞生于20世纪初欧洲在世界各地大规模的**殖民扩张**，最早的人类学家是伴随着殖民军队来到异域土地上的殖民者、宣教士、和爱好探险的贵族土豪们。严格说来，这些人不算社会科学家，但是他们留下的无数的对于异域风土人情的描述却成了后来「摇椅人类学家」的第一手素材。
+这些社会学者认为人类社会和行为模式应该和自然世界一样，具有可发现的**规律和法则**，通过研究这些规律和法则来解决人类的问题、指导人类获得幸福。
 
-所以，人类学的首要目的，是要搞清楚「**文化差异**」。为什么这些人跟我们不一样？他们的语言是什么意思？敬拜什么鬼神？怎么吃饭、结婚、交媾、生养、病死？对异文化的研究产生了**文化相对论**的观念，这在之后的去中心主义的运动中得到了更多的发展。异文化的风俗习惯也使得一些人类学家好奇是什么导致了这些文化差异、又是什么使得我们despite这些差异都可以被称之为人。这些追问就催生出了**功能主义**、**结构主义**、**功能结构主义**等等。**这些理论是在与异文化的碰撞中产生出来的，与社会学是通过对欧洲自身社会的观察产生理论的路数是不一样的**。
+因此在方法论上，社会学和心理学非常依赖**定量分析、实验设计、统计分析、建立模型**。大量借鉴数学和物理原理，用基于数据的量化的概念描述社会和人类的心理和行为。
 
-人类学研究涉及的主要研究手段是**描述性**的，和社会学使用**自然科学**的研究方法很不一样。社会学的研究者必须是detached、冷眼旁观的、中性的、假设不对研究结果施加影响的，一如他们所想模仿的自然科学研究者一样。而人类学者则不同，他们一上来就是**参与观察**（participant observation），意思就是要进入到研究人群中，尽量融入，同吃同住、能找个当地人认干爸干妈最好。然后作为被研究人群的一员以他们的视角看世界，获取一种「他者」的眼光。这样一来，研究者就和被研究者一起、共同完成研究课题、共同书写民族志，民族志的产生是研究者和被研究者辩证性互动（dialectic interaction）的结果。
+这里我把社会学和心理学放在一起讲了，不仅因为它们两个在知识论和方法论上非常一致。还因为人类学和它们比起来，简直就是羊群里的狼，必须单独提出来。
 
--   **发展**
+---
 
-后来随着殖民主义的瓦解，后殖民时代的来临，人类学经历了一系列重大的反思和理论发展，对社会学影响反倒没这么大，因为社会学本来也不太涉及前殖民地社会。
+人类学比社会学、心理学的产生要晚的多。
 
-这部分说起来内容太多。主要是对**民族中心主义**的反思。作为殖民主义曾经的「帮凶」，人类学其实一直以来带着某种赎罪的心态，对自己曾用极尽猎奇之手段看待和描绘非欧洲文明非常羞愧。在讨论人类学方法论的时候，避免不了要谈及这种「原罪」，以及反思的伦理，以及对反思之反思。
+原因很简单，社会学和心理学最开始的研究对象就是西方自己。
 
-对民族中心主义的反思带来的另外一个问题就是，我们如何能了解异文化？或者说，我们真的有能力理解异文化吗？这就进入到了「阐释人类学」的领域。格尔兹（Clifford Geertz）认为文化的核心只能通过以不断「深描」（thick description）的方式来进入，通过一层层的抽丝剥茧，解开一个又一个的文化符号，抵达文化的精神内核（Ethos）。
+但是人类学是研究**非西方社会**的。所以要等到20世纪西方大规模**殖民扩张**的时候，人类学才诞生。
 
-但深描之后的文化内核在多大程度上是客观和真实的呢？（是的，人类学就是这样一个非常纠结的学科。）是否因为人类学家的参与和介入干扰了被研究者的日常生活从而产生不一样的结论呢？研究者和被研究者的权力关系是怎样的？对于人类研究的伦理和界限在哪里呢？
+最早的人类学家伴随着殖民军队到来。他们是异域土地上的白人男性殖民者、宣教士、和爱好探险的贵族土豪。
 
-至此，你可以看到，由于社会学和人类学诞生的语境是如此不同，它们的内在逻辑和研究路数其实是大相径庭的，即便今天彼此渗透也借鉴了彼此的研究方法，但一个社会学家和一个人类学家在一起聊天聊深了往往会不欢而散（别问我怎么知道的）。
+严格说来，这些人并非都受过社科训练，他们主要是以主观视角描述自己的旅游经验和当地的风土人情。根本没有什么跻身于科学学科、用“科学”的方法拯救人类这样的雄心壮志。
 
-在社会学苦苦支撑其在「科学」领域的一席之地的时候，人类学已经脱离了对「科学」的执念。
+后来人类学从“科学”范式和学科中出走，是从一开始就定下的基调。
 
-2011年，在美国人类学协会在其使命陈述（mission statement）中，第一次把**「科学」**这个词拿去了，取而代之的是**「公共理解」**。
+---
 
-此前的陈述是：
+首先，就方法论来说，人类学的主要研究手段是**描述性**的，和社会学和心理学普遍使用**自然科学**的研究方法很不一样。
 
-> 【To】advance anthropology **as the science** that studies humankind in all its aspects……
+人类学绝对倾向于定性分析，社会学和心理学在最近几年也开始加入一些定性分析的方法，但那种自然科学的底色还是非常明显。
 
-现在是：
+社会学和心理学的论文严格遵循**提出假设、设计变量、设计实验、检验数据、证实或证伪假设这样的自然科学研究路数**。
 
-> 【To】advance **public understanding** of humankind in all its aspects……
+但人类学呢？
 
-……
+**大部分写民族志，也有相当多的人选择小说、诗歌、艺术、纪录片为载体呈现ta们的研究成果。**
 
-啊不知不觉写了这么多。先打住，有人看再填坑……
+为什么会有这些差异？
 
-#未完待续TBC 
+一个很大的原因是殖民地的经历给人类学家带来的极大的PTSD。
+
+刚才说了西方的人类学是殖民扩张的衍生物。当然一开始西方的人类学者对殖民统治也没有那么敏感，甚至他们自己参与了殖民统治，包括对殖民地人民做出了不少残忍的事。
+
+但后来，随着殖民主义的瓦解，前殖民地国家纷纷独立，这些身处殖民腹地的人类学家是首先承认自己罪行的西方人。
+
+特别是在20世纪6、70年代，西方国家自身也在经历一系列的社会变革，共产主义运动、民权运动、反战反隔离运动……这些都对人类学造成了极深刻的影响。
+
+## **西方的人类学开始认真反思自己的【民族中心主义】的立场，以及这个立场对他们研究异己他者的伤害。**
+
+而社会学和心理学在这些风波中受到的冲击就没那么大，因为他们的研究主体，在那个时候，本来也不涉及太多的异文化和他者。
+
+而作为殖民主义曾经的「帮凶」，人类学一直以来带着某种赎罪的心态，对自己曾用极尽猎奇之手段看待和描绘非欧洲文明非常羞愧。
+
+因此任何一本人类学导读都避免不了要谈及这种「原罪」，警告西方学者在与非西方文化相处中小心自己的民族中心主义倾向，一定要反思再反思，克制再克制。
+
+以致于一度流行着一条人类学黄金准则，那就是“凡informant[1]](#ref_1)说的都是对的“。
+
+---
+
+相对于人类学这种痛定思痛，社会学和心理学就不大会这么大费周章的否定自己。
+
+社会学和心理学的研究者认为他们研究的是类似于自然规律那样的社会法则，是不以人的意志为转移的，因此他们得出的结论应该是客观的、可重复的、可证伪的。
+
+但人类学者认为**不同的文化会孕育不同的实践法则**。
+
+最有代表性的就是关于“经济理性”的讨论。
+
+非西方国家并不奉行西方利益最大化的原则，在西方学者看来，非西方就是非理性的、愚昧的。
+
+然而人类学者则认为“利益最大化”绝非普世法则，非西方对人际关系和人与自然之间关系的看重反而更加理性与具有可持续性。
+
+**所以我开始为啥说人类学是西方社会科学中的狼。因为它无时无刻不在批评西方世界的文化逻辑。**
+
+---
+
+另外，研究的视角也不一样。
+
+**社会学和心理学家把自己定位为“专家”，人类学研究者把自己定位为“学生”。**
+
+“专家”必须是抽离的、冷眼旁观的、中性的、客观的，他们的喜好和情绪不应该对研究结果产生影响。
+
+而“学生”是来学习、参与、观察的。他们的在场与被研究者一同创造出对世界新的理解。
+
+所以人类学者在民族志中从不讳言自己在异乡闹的笑话、产生的误解和冲突。
+
+你在社会学、心理学论文中不可能看到这些东西。
+
+## 但对人类学者来说。这些“错误的经历”正是产生“正确的理解”不可或缺的步骤。
+
+“学生”也不认为自己比被研究者懂得多，他们希望被研究者用自己的话来讲他们自己的故事。
+
+“学生”负责学习、明白、理解、最后翻译给世界上不认识这些异文化的读者听。带着读者进入异文化的世界，让他们知道作为人类，还有另一种活法，另一套价值观，另一种理解世界的方式，
+
+## ——还有另一条路。一条非西方社会所熟知的路。
+
+---
+
+**社会学家和心理学家以自然科学为模版，以科学为手段，以改变世界和改造人类为诉求。**
+
+**人类学家则认为用自然科学的逻辑研究人类是不够的。**
+
+因为自然的客体是死的，而人是活的，社会是活的，文化也是活的。
+
+研究活人，不能仅仅通过实验、量表、数据分析、建造模型，还要通过交谈、观察、参与、深入地描述、以我的主观性来揣摩你的主观性，让我来理解你的世界，也把我的世界展开给你看。
+
+与其要改变世界和他人，不如我们先来理解世界和他人。
+
+**自然科学和社会科学寻求对相关性（correlation）的认知，人类学寻求对意思（meaning）和意义（significance）的理解。**
+
+这就是它们之间最大的不同。
+
+## 参考
+
+1.  [^](#ref_1_0)人类学的田野调查中为人类学家提供信息的本地人。
+
