--- a/John Hexa/农村的未来.md
+++ b/John Hexa/农村的未来.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *24/08/2021* 
-Links: [[农村出身]] [[John Hexa/光棍问题]] [[留守儿童]] [[国家绿化]] [[素质]] [[中国基建]]
+Links: [[农村出身]] [[John Hexa/光棍问题]] [[Nell Nell/留守儿童]] [[国家绿化]] [[素质]] [[中国基建]]
 Tags: #中国China 
   
 
