--- a/John Hexa/包装.md
+++ b/John Hexa/包装.md
@@ -1,10 +1,10 @@
-# 包装伦理
+# 包装
 *为什么中国的白酒部分包装这么 low?*
 
 > Author: #JohnHexa
-Last update: *23/07/2021* 
-Links:
-Tags: #文化艺术Art #社科Social-Science 
+Last update: *11/09/2021* 
+Links: [[设计大赛]] [[奢侈品 - 之一]] [[奢侈品 - 之二]] [[奢侈品 - 之三]]
+Tags: #文化艺术Art #社科Social-Science #一法通万法通SthOfEverything 
 
  
 借这个地方说点包装的伦理问题——
