--- a/John Hexa/懒散.md
+++ b/John Hexa/懒散.md
@@ -3,8 +3,8 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links:
-Tags:  #家族Clan #家族Clan #第一性Feminism
+Links: 
+Tags:  #家族Clan #第一性Feminism
 
 
 
