--- a/John Hexa/条理.md
+++ b/John Hexa/条理.md
@@ -3,8 +3,9 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links:
-Tags:  #家族Clan #第一性Feminism #家族Clan #第一性Feminism
+Links: [[学好语文]] [[逻辑思维]] [[核心能力]] [[碎片信息]]
+Tags:  #家族Clan #第一性Feminism #一法通万法通SthOfEverything #人生管理Life-Management 
+沙海拾金： [[有条理.jpeg]]
 
 
 
