--- a/John Hexa/粗心.md
+++ b/John Hexa/粗心.md
@@ -3,8 +3,8 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links:
-Tags:  #家族Clan #家族Clan #第一性Feminism
+Links: [[功夫]] [[聪明的笨功夫]] [[拖拉机]] 
+Tags:  #家族Clan #第一性Feminism #一法通万法通SthOfEverything 
 
 
 
