--- a/Nell Nell/上帝 - 试探.md
+++ b/Nell Nell/上帝 - 试探.md
@@ -3,9 +3,9 @@
 
 > Author: #NellNell 
 Last update: *28/08/2021* 
-Links: [[世界史]] [[基督教的怀疑精神（上）]] [[基督教的怀疑精神（下）]] [[基督教的怀疑精神（后记）]] 
+Links: [[世界史]] [[基督教的怀疑精神（上）]] [[基督教的怀疑精神（下）]] [[基督教的怀疑精神（后记）]] [[圣经 - 神迹]] [[神迹]] [[信与疑]] 
 Tags: #神学Theology 
-
+沙海拾金： [[神迹.jpg]]
 
   
 
