--- a/摘抄/摘抄 - 励志金句.md
+++ b/摘抄/摘抄 - 励志金句.md
@@ -194,3 +194,13 @@
 
 ---
 
+无论一方的逻辑多精致，客观指标上多优秀，只要把这些优势用在合理化对别人的不包容上，用在产生藐视和敌对上，那就是精致的弱小。 
+
+  
+---
+
+厚学博览，宽纳善疑，赤子之心不弃，万丈之崖可攀。
+
+---  
+
+以学养身，以身养心，是以历经坎坷而沉毅之气不折。志不足恃，气不足恃，才不足恃，唯毅力足恃。内尽其心以事其亲，外崇礼让以接天下。学问纯正，然后践履成德，可以不辱其身，不忧其亲，不亏其体。
