--- a/John Hexa/悟性.md
+++ b/John Hexa/悟性.md
@@ -3,8 +3,8 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links:
-Tags:  #家族Clan  #家族Clan #第一性Feminism
+Links: [[永远忐忑]] [[功夫]] [[SOP - 蒸蛋羹]] [[一点就透]] [[尊师]] [[学与玩]] [[学习]] [[世界史]] [[过渡性价值观]]
+Tags:  #一法通万法通SthOfEverything #教育Education #家族Clan #第一性Feminism
 
 
 
