--- a/John Hexa/赦罪伦理学.md
+++ b/John Hexa/赦罪伦理学.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *26/07/2021* 
-Links: [[没伦理]] [[技术伦理]] [[包装伦理]] [[乱伦]] [[道德]]
+Links: [[没伦理]] [[技术伦理]] [[包装]] [[乱伦]] [[道德]]
 Tags: #神学Theology  #社科Social-Science 
   
 
