--- a/摘抄/摘抄 - 人生管理.md
+++ b/摘抄/摘抄 - 人生管理.md
@@ -178,5 +178,6 @@
 
 你们要相信这句话——**任何不容你选择的意外，背后最终包含的是对你的好意。**
 
+#### 精神资本家
 
-
+无论你富贵或是贫穷、健全还是残疾、顺境还是逆境，人都应该坚持不懈的努力。这不是为了糊口或者出人头地，而就是因为**这是人度过人生、享受人生的最好方式**。无论谁跟你说了什么关于努力的命题，也不管这些命题是真是假，都跟你是不是要努力没有关系。
