--- a/John Hexa/举家之力.md
+++ b/John Hexa/举家之力.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *20/07/2021* 
-Links: [[恩]] [[伴侣无收入]] [[一人一半]] [[女性公平]]
+Links: [[恩]] [[老公不挣钱]] [[一人一半]] [[女性公平]]
 Tags: #亲密关系Intimate-Relationship #人生管理Life-Management #人性与心理HumanityAndPsychology #第一性Feminism 
 
 
