--- a/John Hexa/危险迹象.md
+++ b/John Hexa/危险迹象.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[射鸟]] [[强奸]] [[虐猫]] [[虐猫权]]
+Links: [[人品]] [[射鸟]] [[强奸]] [[虐猫]] [[虐猫权]]
 Tags:  #家族Clan #第一性Feminism #人性与心理HumanityAndPsychology #人生管理Life-Management 
 沙海拾金： [[危险迹象1.jpg]]
 
