--- a/John Hexa/原生家庭.md
+++ b/John Hexa/原生家庭.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[时代烙印]]
+Links: [[人心不古]]
 Tags: #爱Caritas #教育Education #人性与心理HumanityAndPsychology #人生管理Life-Management 
 
  
