--- a/John Hexa/晚景凄凉.md
+++ b/John Hexa/晚景凄凉.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[老有所依 - 之一]] [[老有所依 - 之二]] [[老有所依 - 之三]] [[老人跳桥]] [[不思恶]] [[John Hexa/活死人]] [[活死人2]] [[活成这样]] [[活得虚无]] [[生活现状]] [[过渡性价值观]] [[战胜抑郁]] [[对抗抑郁]] [[苦熬 - 之一]] [[苦熬 - 之二]] [[爱 - Caritas]]
+Links: [[老有所依 - 之一]] [[老有所依 - 之二]] [[老有所依 - 之三]] [[老人跳桥]] [[一事无成]] [[John Hexa/活死人]] [[活死人2]] [[活成这样]] [[活得虚无]] [[生活现状]] [[过渡性价值观]] [[战胜抑郁]] [[对抗抑郁]] [[苦熬 - 之一]] [[苦熬 - 之二]] [[爱 - Caritas]]
 Tags:  #爱Caritas #家族Clan #人生管理Life-Management #教育Education 
 
 
