--- a/John Hexa/精英集团.md
+++ b/John Hexa/精英集团.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[老有所依 - 之一]] [[老有所依 - 之二]] [[老有所依 - 之三]] [[时代烙印]] [[爹味]]
+Links: [[老有所依 - 之一]] [[老有所依 - 之二]] [[老有所依 - 之三]] [[人心不古]] [[爹味]]
 Tags: #新冠Covid-19 #中国China #社科Social-Science #人生管理Life-Management 
 
  
