--- a/John Hexa/求偶烧钱.md
+++ b/John Hexa/求偶烧钱.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [女性权利与女性人格构建](https://zhihu.com/collection/369876193)
+Links: [女性权利与女性人格构建](https://zhihu.com/collection/369876193) [[要的是啥 - 女人]] [[要的是啥 - 男人]]
 Tags: #亲密关系Intimate-Relationship 
 
  
