--- a/John Hexa/活死人.md
+++ b/John Hexa/活死人.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[活死人2]] [[拆弹]] [[活成这样]] [[活得虚无]] [[道德虚无]] [[危险迹象]] [[安全感]] [[悲观与乐观]] [[善良与现实]] [[废死]] [[精神资本家]] [[宗教的意义]] [[拆弹]] [[人吃人]] [[人品]] [[信仰]] [[克服恐惧]] [[免于极端]] [[Nell Nell/勇气]] [[吃瓜]] [[坚守理想]] [[头等大事]] [[孩子的遗书]] [[恶之花]] [[真正的恶]] [[死亡]] [[电车难题]] [[老人跳桥]] [[精英集团]] [[老有所依 - 之一]] [[老有所依 - 之二]] [[老有所依 - 之三]] [[自弃]] [[苦难之源]] [[负面沉浸]] [[过渡性价值观]] [[对抗抑郁]] [[战胜抑郁]] [[不思恶]]
+Links: [[活死人2]] [[拆弹]] [[活成这样]] [[活得虚无]] [[道德虚无]] [[危险迹象]] [[安全感]] [[悲观与乐观]] [[善良与现实]] [[废死]] [[精神资本家]] [[宗教的意义]] [[拆弹]] [[人吃人]] [[人品]] [[信仰]] [[克服恐惧]] [[免于极端]] [[Nell Nell/勇气]] [[吃瓜]] [[坚守理想]] [[头等大事]] [[孩子的遗书]] [[恶之花]] [[真正的恶]] [[死亡]] [[电车难题]] [[老人跳桥]] [[精英集团]] [[老有所依 - 之一]] [[老有所依 - 之二]] [[老有所依 - 之三]] [[自弃]] [[苦难之源]] [[负面沉浸]] [[过渡性价值观]] [[对抗抑郁]] [[战胜抑郁]] [[一事无成]]
 Tags:  #社科Social-Science #家族Clan #第一性Feminism #人生管理Life-Management #神学Theology #人性与心理HumanityAndPsychology 
 
 
