--- a/Nell Nell/时代印记.md
+++ b/Nell Nell/时代印记.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *25/08/2021* 
-Links: [[时代烙印]] [[时代变了]] [[爹味]] [[精英集团]] [[选美]] [[女权运动的进展]] [[女权挑战]]
+Links: [[人心不古]] [[时代变了]] [[爹味]] [[精英集团]] [[选美]] [[女权运动的进展]] [[女权挑战]]
 Tags: #社科Social-Science #第一性Feminism #教育Education 
 
 
