--- a/John Hexa/为何迷信.md
+++ b/John Hexa/为何迷信.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[可信]] [[信仰]] [[信仰质疑]] [[为何迷信]] [[宗教与迷信]] [[神话心理与迷信心理]]
+Links: [[可信]] [[信仰是什么]] [[信仰质疑]] [[为何迷信]] [[宗教与迷信]] [[神话心理与迷信心理]]
 Tags: #科学与技术ScienceAndTech #神学Theology #人性与心理HumanityAndPsychology/宗教心理学PsychologyOfReligion 
 
  
