--- a/John Hexa/以弱悯强.md
+++ b/John Hexa/以弱悯强.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *12/08/2021* 
-Links: [[同情的资格]] [[孰强孰弱]] [[天赋特权]] [[能力与责任]] [[自强]] [[John Hexa/痛苦根源]] [[人性本质]] [[对人类失望]] [[不该受亏待]] [[Sin]] [[谴责恶行]] [[真正的恶]] [[无道德社会]] [[爱与自由]] [[以爱应恨]] [[爱的好处]] [[祈祷与祝福]] [[无条件的爱]] [[电车难题]] [[捧杀]] [[体验痛苦]]
+Links: [[同情的资格]] [[孰强孰弱]] [[天赋特权]] [[能力与责任]] [[自强]] [[John Hexa/痛苦根源]] [[你讨厌的那种人]] [[对人类失望]] [[不该受亏待]] [[Sin]] [[谴责恶行]] [[真正的恶]] [[无道德社会]] [[爱与自由]] [[以爱应恨]] [[爱的好处]] [[祈祷与祝福]] [[无条件的爱]] [[电车难题]] [[捧杀]] [[体验痛苦]]
 Tags: #爱Caritas #人性与心理HumanityAndPsychology #神学Theology #一法通万法通SthOfEverything #人生管理Life-Management 
   
 
