--- a/John Hexa/可信.md
+++ b/John Hexa/可信.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[信仰]] [[职业规划]] [[爱 - Caritas]] [[信与疑]] [[信的捆绑]] [[世界史]] [[气泡膜]]
+Links: [[信仰是什么]] [[职业规划]] [[爱 - Caritas]] [[信与疑]] [[信的捆绑]] [[世界史]] [[气泡膜]]
 Tags: #自然法Natural-Law #社科Social-Science #家族Clan  
 
 
