--- a/John Hexa/可信标准.md
+++ b/John Hexa/可信标准.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *20/07/2021* 
-Links: [[重复现象]] [[可信标准]] [[信仰]] [[信的力量]] [[信的捆绑]] [[世界史]] [[自然法]] 
+Links: [[重复现象]] [[可信标准]] [[信仰是什么]] [[信的力量]] [[信的捆绑]] [[世界史]] [[自然法]] 
 Tags: #一法通万法通SthOfEverything #人生管理Life-Management #第一性Feminism #自然法Natural-Law 
 
 
