--- a/John Hexa/圣经 - 约伯记.md
+++ b/John Hexa/圣经 - 约伯记.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *23/07/2021* 
-Links: [[John Hexa/圣经 - 五饼二鱼]] [[爱 - Caritas]] [[信仰]] [[信的力量]] [[使徒行传]] [[信仰质疑]]
+Links: [[John Hexa/圣经 - 五饼二鱼]] [[爱 - Caritas]] [[信仰是什么]] [[信的力量]] [[使徒行传]] [[信仰质疑]]
 Tags: #神学Theology #人性与心理HumanityAndPsychology/宗教心理学PsychologyOfReligion 
 沙海拾金： [[约伯记1.jpg]] [[约伯记2.jpg]] [[约伯记3.jpg]] [[约伯记4.jpg]] [[约伯记5.jpg]] [[约伯记6.jpg]] [[约伯记7.jpg]] [[约伯记8.jpg]] [[约伯记9.jpg]]
 
