--- a/John Hexa/心不自由.md
+++ b/John Hexa/心不自由.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *26/07/2021* 
-Links: [[烦躁]] [[John Hexa/自由意志]] [[核心能力]] [[坚守理想]] [[信仰]] [[信的捆绑]] [[信的力量]]
+Links: [[烦躁]] [[John Hexa/自由意志]] [[核心能力]] [[坚守理想]] [[信仰是什么]] [[信的捆绑]] [[信的力量]]
 Tags: #神学Theology  #人性与心理HumanityAndPsychology/宗教心理学PsychologyOfReligion 
   
 
