--- a/John Hexa/无明憎.md
+++ b/John Hexa/无明憎.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[被讨厌]] [[讨厌的人]] [[人性本质]] 
+Links: [[被讨厌]] [[讨厌的人]] [[你讨厌的那种人]] 
 Tags:  #家族Clan #第一性Feminism #人性与心理HumanityAndPsychology 
 
 
