--- a/Nell Nell/因需生爱.md
+++ b/Nell Nell/因需生爱.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *04/09/2021* 
-Links: [[爱无筹码]] [[爱你，与你无关]] [[为何对你好]] [[爱 - Caritas]] [[走到一起]] [[今生之意]] [[人生的意义]] [[人性本质]] [[责任感]] [[契约精神]]
+Links: [[爱无筹码]] [[爱你，与你无关]] [[为何对你好]] [[爱 - Caritas]] [[走到一起]] [[今生之意]] [[人生的意义]] [[你讨厌的那种人]] [[责任感]] [[契约精神]]
 Tags: #爱Caritas #亲密关系Intimate-Relationship #人生管理Life-Management 
 
 
