--- a/Nell Nell/培养信教.md
+++ b/Nell Nell/培养信教.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *17/07/2021* 
-Links: [[信仰]] [[信仰自由]] [[圣经 - 约伯记]]
+Links: [[信仰是什么]] [[信仰自由]] [[圣经 - 约伯记]]
 Tags: 
   
 
