--- a/Nell Nell/拜登的挑战.md
+++ b/Nell Nell/拜登的挑战.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *25/08/2021* 
-Links: [[Nell Nell/拜登之胜]] [[John Hexa/拜登之胜]] [[拜登的承诺]]
+Links: [[Nell Nell/拜登之胜]] [[左转右转]] [[拜登的承诺]]
 Tags: #世界大局World-Trend 
 
 
