--- a/Nell Nell/爱国情绪.md
+++ b/Nell Nell/爱国情绪.md
@@ -4,7 +4,7 @@
 
 > Author: #NellNell 
 Last update: *25/08/2021* 
-Links: [[关于爱与恨的一些思考]] [[爱与恨]] [[爱国行为]] [[仇日]] [[人性本质]]
+Links: [[关于爱与恨的一些思考]] [[爱与恨]] [[爱国行为]] [[仇日]] [[你讨厌的那种人]]
 Tags: #中国China #人性与心理HumanityAndPsychology 
 
   
