--- a/Nell Nell/神之爱.md
+++ b/Nell Nell/神之爱.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *04/09/2021* 
-Links: [[爱 - Caritas]] [[John Hexa/缺爱]] [[爱与恨]] [[以爱应恨]] [[人性本质]] [[讨厌的人]] [[福音 - 之一]] [[以弱悯强]] [[同情的资格]] [[共情 & 揣测]] [[自卑]] [[John Hexa/值得一嫁]]
+Links: [[爱 - Caritas]] [[John Hexa/缺爱]] [[爱与恨]] [[以爱应恨]] [[你讨厌的那种人]] [[讨厌的人]] [[福音 - 之一]] [[以弱悯强]] [[同情的资格]] [[共情 & 揣测]] [[自卑]] [[John Hexa/值得一嫁]]
 Tags: #爱Caritas #神学Theology #一法通万法通SthOfEverything 
 
 “神爱世人”，就是**上帝要经验你所经验的一切**。
