--- a/Nell Nell/自证预言.md
+++ b/Nell Nell/自证预言.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *6/07/2021* 
-Links: [[信的力量]] [[信仰]]
+Links: [[信的力量]] [[信仰是什么]]
 Tags: #人生管理Life-Management #人性与心理HumanityAndPsychology #科学与技术ScienceAndTech/医学Medical-Science 
   
 
