--- a/John Hexa/使徒行传.md
+++ b/John Hexa/使徒行传.md
@@ -4,7 +4,7 @@
 
 > Author: #Anonymity 
 Last update: *26/07/2021* 
-Links: [[信仰]] [[信仰质疑]] [[信的捆绑]]
+Links: [[信仰是什么]] [[信仰质疑]] [[信的捆绑]]
 Tags: #神学Theology   
   
 
