--- a/John Hexa/底层出身.md
+++ b/John Hexa/底层出身.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *01/09/2021* 
-Links: [[人吃人]] [[人性本质]] [[没人性]] [[城府]]
+Links: [[人吃人]] [[你讨厌的那种人]] [[没人性]] [[城府]]
 Tags: #人性与心理HumanityAndPsychology #社科Social-Science 
 
 
