--- a/John Hexa/性命双修.md
+++ b/John Hexa/性命双修.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *26/07/2021* 
-Links: [[爱 - Caritas]] [[信仰]] 
+Links: [[爱 - Caritas]] [[信仰是什么]] 
 Tags: #家族Clan #人性与心理HumanityAndPsychology 
   
 
