--- a/John Hexa/慎终.md
+++ b/John Hexa/慎终.md
@@ -3,8 +3,8 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links:
-Tags:  #家族Clan #家族Clan #第一性Feminism
+Links: [[无神论]] [[无神论者]]
+Tags: #家族Clan #第一性Feminism #神学Theology 
 
 
 
