--- a/John Hexa/无错.md
+++ b/John Hexa/无错.md
@@ -1,14 +1,12 @@
 # 无错
-*同学考试作弊，我举报了他，导致他被处分丢了学位证，现在我好像被全班孤立了，我有错吗？*
+*同学考试作弊，我举报了他，导致他被处分丢了学位证，现在我好像被全班孤立了，我有错吗?*
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links:
-Tags:  #家族Clan  #家族Clan #第一性Feminism
+Links: [[被讨厌]] [[地狱这东西 - 之一]] [[脱困]] [[道德]]
+Tags: #家族Clan #人性与心理HumanityAndPsychology 
 
-
-
-
+ 
 你没有错。
 
 你只是需要找到一群都认为这没有错的人，去他们中间生活。
