--- a/John Hexa/检验信仰的客观标准.md
+++ b/John Hexa/检验信仰的客观标准.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *08/09/2021* 
-Links: [[信仰]] [[信的捆绑]] [[信的力量]] [[可信]] [[信仰]] [[信与疑]] [[信仰质疑]] [[可信标准]] [[真正可信]] [[科学信仰]]
+Links: [[信仰是什么]] [[信的捆绑]] [[信的力量]] [[可信]] [[信仰是什么]] [[信与疑]] [[信仰质疑]] [[可信标准]] [[真正可信]] [[科学信仰]]
 Tags: #自然法Natural-Law #人生管理Life-Management #一法通万法通SthOfEverything 
 
 这个标准很简单——会影响到你的现实的决定的，你就不是假意相信。
