--- a/John Hexa/沙漠教父.md
+++ b/John Hexa/沙漠教父.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[信仰]] [[爱 - Caritas]]
+Links: [[信仰是什么]] [[爱 - Caritas]]
 Tags: #神学Theology #爱Caritas 
 
  
