--- a/John Hexa/科学不正确.md
+++ b/John Hexa/科学不正确.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[John Hexa/科学教]] [[无神论的科学信仰]] [[信仰]] [[信仰质疑]] [[可信]] [[可信标准]] [[无爱信仰]]
+Links: [[John Hexa/科学教]] [[无神论的科学信仰]] [[信仰是什么]] [[信仰质疑]] [[可信]] [[可信标准]] [[无爱信仰]]
 Tags: #科学与技术ScienceAndTech #社科Social-Science #自然法Natural-Law 
 
  
