--- a/John Hexa/进化心理学.md
+++ b/John Hexa/进化心理学.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *01/09/2021* 
-Links: [[“纪实”]] [[John Hexa/科学教]] [[Nell Nell/科学教]] [[何为客观]] [[可信标准]] [[价值观]] [[励志]] [[学习]] [[世界史]] [[对事不对人]] [[美德]] [[时尚品味]] [[丑]] [[人性本质]] 
+Links: [[“纪实”]] [[John Hexa/科学教]] [[Nell Nell/科学教]] [[何为客观]] [[可信标准]] [[价值观]] [[励志]] [[学习]] [[世界史]] [[对事不对人]] [[美德]] [[时尚品味]] [[丑]] [[你讨厌的那种人]] 
 Tags:  #一法通万法通SthOfEverything #人生管理Life-Management #社科Social-Science #人性与心理HumanityAndPsychology #亲密关系Intimate-Relationship 
 沙海拾金： [[沙海拾金/进化心理学.JPEG]] [[进化心理学2.jpeg]] [[进化心理学3.jpg]] [[进化心理学4.jpg]] [[进化心理学5.jpg]] [[进化心理学6.jpg]] 
   
