--- a/John Hexa/钓鱼岛.md
+++ b/John Hexa/钓鱼岛.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[John Hexa/拜登之胜]]
+Links: [[左转右转]]
 Tags: #世界大局World-Trend #中国China 
 
  
