--- a/Nell Nell/两轮竞争.md
+++ b/Nell Nell/两轮竞争.md
@@ -1,10 +1,10 @@
-# 生意难做
+# 两轮竞争
 *2021年为什么周围做生意的人都开始说相比之前，生意越来越难做？*
 
 > Author: #JohnHexa 
 Last update: *20/07/2021* 
-Links:
-Tags: 
+Links: [[计划经济]] [[杀死美国经济]] [[职业规划]] [[新兴职业]]
+Tags: #社科Social-Science 
   
 
 经济这种事，一般有两轮竞争。
