--- a/Nell Nell/美国大选.md
+++ b/Nell Nell/美国大选.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *25/08/2021* 
-Links: [[Nell Nell/拜登之胜]] [[John Hexa/拜登之胜]] [[拜登的承诺]] [[特朗普连任]] [[特朗普 - 谥号]] [[特朗普 - 能力]]
+Links: [[Nell Nell/拜登之胜]] [[左转右转]] [[拜登的承诺]] [[特朗普连任]] [[特朗普 - 谥号]] [[特朗普 - 能力]]
 Tags: #世界大局World-Trend 
 
 
