--- a/John Hexa/不予考虑.md
+++ b/John Hexa/不予考虑.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[恋爱原理]] [[尊重]] [[不抱怨]] [[爱得痛苦]] [[爱的好处]] [[爱的自检]] [[爱情 - Romance]] [[爱与欲望]] [[爱的资格]] [[无条件的爱]] [[优秀与被爱]] [[前途与爱情]] [[理性的爱]] [[不配被爱]] [[何谓可爱]] [[为“爱”妥协]] [[崇高爱情]] [[不敢爱]] [[爱无筹码]] [[爱与自由]] [[爱与神哲学]] [[爱的自检]] 
+Links: [[恋爱原理]] [[尊重]] [[不抱怨]] [[爱得痛苦]] [[爱的好处]] [[爱的自检]] [[爱情 - Romance]] [[爱与欲望]] [[爱的资格]] [[无条件的爱]] [[优秀与被爱]] [[前途与爱情]] [[理性的爱]] [[不配被爱]] [[何谓可爱]] [[为“爱”妥协]] [[崇高爱情]] [[爱怕了]] [[爱无筹码]] [[爱与自由]] [[爱与神哲学]] [[爱的自检]] 
 Tags: #亲密关系Intimate-Relationship #第一性Feminism #人生管理Life-Management #一法通万法通SthOfEverything 
 
  
