--- a/John Hexa/求之不得.md
+++ b/John Hexa/求之不得.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *11/08/2021* 
-Links: [[原谅]] [[怨恨]] [[John Hexa/制怒]] [[宽恕秘诀]] [[被讨厌]] [[被批评]] [[道歉]] [[认错]] [[可怜者可恨]] [[不敢爱]] [[可爱 - Loveable]] [[情侣话题]] [[会做人]] [[为委屈而道歉]] [[爱的抱歉]] [[别想骗我]] 
+Links: [[原谅]] [[怨恨]] [[John Hexa/制怒]] [[宽恕秘诀]] [[被讨厌]] [[被批评]] [[道歉]] [[认错]] [[可怜者可恨]] [[爱怕了]] [[可爱 - Loveable]] [[情侣话题]] [[会做人]] [[为委屈而道歉]] [[爱的抱歉]] [[别想骗我]] 
 Tags: #人生管理Life-Management #一法通万法通SthOfEverything #亲密关系Intimate-Relationship #家族Clan #人性与心理HumanityAndPsychology #教育Education 
 
 
