--- a/John Hexa/垄断的诅咒.md
+++ b/John Hexa/垄断的诅咒.md
@@ -5,6 +5,7 @@
 Last update: *23/07/2021* 
 Links: [[资本家1]] [[资本家2]] [[资本家的剥削]]
 Tags: #企业管理B-Management #社科Social-Science #自然法Natural-Law 
+沙海拾金： [[降服垄断.PNG]]
 
  
 一种以成为基础设施为追求的事业，必须在本质上、从心底里了解客观世界对这种事业的绝对限定——唯有清清楚楚、明明白白、打从心底里没有一刻不清楚自己是在做慈善的人，配得这个地位而不受毁灭性的诅咒。
