--- a/John Hexa/键政.md
+++ b/John Hexa/键政.md
@@ -3,8 +3,9 @@
 
 > Author: #JohnHexa 
 Last update: *14/09/2021* 
-Links: [[政治]] [[关心政治]] [[不论大事]] [[无病呻吟]] [[反弹琵琶]] [[解决996]] [[996]]
+Links: [[政治]] [[关心政治]] [[不论大事]] [[无病呻吟]] [[反弹琵琶]] [[解决996]] [[996]] [[戒阴阳怪气]] [[严肃]]
 Tags: #社科Social-Science #人性与心理HumanityAndPsychology 
+沙海拾金： [[议政者不干政.jpg]] [[戒阴阳怪气.jpg]]
 
 
 键政是一种“政治家家酒”。  
