--- a/John Hexa/人人都像你这样.md
+++ b/John Hexa/人人都像你这样.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *16/08/2021* 
-Links: [[谁的责任]] [[知法犯法]] [[责任感]] [[道德]] [[一点就透]] [[尊师]] [[求学]] [[自然法]] [[勿处实祸]] [[条理]] [[学好语文]] [[逻辑思维]] [[农夫与蛇]]
+Links: [[谁的责任]] [[知法犯法]] [[责任感]] [[道德]] [[悟性2]] [[尊师]] [[求学]] [[自然法]] [[勿处实祸]] [[条理]] [[学好语文]] [[逻辑思维]] [[农夫与蛇]]
 Tags: #社科Social-Science #人性与心理HumanityAndPsychology 
 
   
