--- a/John Hexa/塔利班 - 客观.md
+++ b/John Hexa/塔利班 - 客观.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *24/08/2021* 
-Links: [[塔利班]] [[世界史]] [[滚滚向前]] [[非常之“非常”]] [[思而行]] [[反弹琵琶]] [[敌人]] [[尊师]] [[一点就透]] [[价值观]] [[塔利班 - 判罪]] [[塔利班 - 生机]] [[塔利班 - 观察点]]
+Links: [[塔利班]] [[世界史]] [[滚滚向前]] [[非常之“非常”]] [[思而行]] [[反弹琵琶]] [[敌人]] [[尊师]] [[悟性2]] [[价值观]] [[塔利班 - 判罪]] [[塔利班 - 生机]] [[塔利班 - 观察点]]
 Tags: #人性与心理HumanityAndPsychology #社科Social-Science 
   
 认为塔利班曾经很坏，这没什么问题。
