--- a/John Hexa/好书.md
+++ b/John Hexa/好书.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[学习哲学 - 之一]]
+Links: [[学习哲学 - 之一]] [[高中书目]] [[藏书]]
 Tags: #文化艺术Art/文学Literal-Art #人生管理Life-Management #教育Education 
 
  
