--- a/John Hexa/孰强孰弱.md
+++ b/John Hexa/孰强孰弱.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[养废了]] [[能力与责任]] [[不原谅的诅咒]] [[亲子冲突]] [[你有问题还是我有问题]] [[做得不好]] [[孩子的遗书]] [[情绪失控的孩子]] [[所谓儿女]] [[永远忐忑]] [[父母之爱]] [[父母之难]] [[父母惩戒权]] [[父母的支持]]
+Links: [[养废了]] [[能力与责任]] [[不原谅的诅咒]] [[亲子冲突]] [[你有问题还是我有问题]] [[做得不好]] [[孩子的遗书]] [[情绪失控的孩子]] [[所谓儿女]] [[永远忐忑]] [[拼命解决]] [[父母之难]] [[父母惩戒权]] [[父母的支持]]
 Tags:  #家族Clan #教育Education #人生管理Life-Management 
 
 
