--- a/John Hexa/懂事 1.md
+++ b/John Hexa/懂事 1.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *08/09/2021* 
-Links: [[稳重]] [[受欢迎]] [[一点就透]] [[John Hexa/懂事]] [[服从]] [[求学]] [[责任感]] [[Nell Nell/教养]] [[John Hexa/教养]] [[有修养]]
+Links: [[稳重]] [[受欢迎]] [[悟性2]] [[John Hexa/懂事]] [[服从]] [[求学]] [[责任感]] [[Nell Nell/教养]] [[John Hexa/教养]] [[有修养]]
 Tags: #教育Education #家族Clan #人生管理Life-Management #一法通万法通SthOfEverything 
   
 懂事是指你“懂人的事”。
