--- a/John Hexa/经营意识.md
+++ b/John Hexa/经营意识.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *14/09/2021* 
-Links: [[弱势部门]] [[创业]] [[创业红线]] [[农村出身]] [[不卑不亢 - 之一]] [[不卑不亢 - 之二]] [[谁说了算]] [[独得之秘]]
+Links: [[弱势部门]] [[创业契机]] [[创业红线]] [[农村出身]] [[不卑不亢 - 之一]] [[不卑不亢 - 之二]] [[谁说了算]] [[独得之秘]]
 Tags: #社科Social-Science 
 
 
