--- a/John Hexa/维珍银河.md
+++ b/John Hexa/维珍银河.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *27/06/2021* 
-Links:  [[股市]] [[港股暴跌]]
+Links:  [[股市]] [[两难]]
 Tags: #世界大局World-Trend #社科Social-Science 
 
 说明市面上钱太多了，没处烧，于是故事太值钱了。
