--- a/John Hexa/赎罪.md
+++ b/John Hexa/赎罪.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[一点就透]] [[尊师]]
+Links: [[悟性2]] [[尊师]]
 Tags: #社科Social-Science #神学Theology #爱Caritas 
 
  
