--- a/Nell Nell/关于爱与恨的一些思考.md
+++ b/Nell Nell/关于爱与恨的一些思考.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *21/08/2021* 
-Links: [[爱 - Caritas]] [[爱与恨]] [[敌人]] [[以爱应恨]] [[以爱之名]] [[反感吹牛]] [[恋爱原理]] [[一点就透]] [[尊师]] [[爱的自检]] [[爱的好处]] [[爱无筹码]] [[爱得痛苦]]
+Links: [[爱 - Caritas]] [[爱与恨]] [[敌人]] [[以爱应恨]] [[以爱之名]] [[反感吹牛]] [[恋爱原理]] [[悟性2]] [[尊师]] [[爱的自检]] [[爱的好处]] [[爱无筹码]] [[爱得痛苦]]
 Tags: #爱Caritas #人性与心理HumanityAndPsychology #社科Social-Science #家族Clan 
 
 
