--- a/Nell Nell/出言不逊的理由.md
+++ b/Nell Nell/出言不逊的理由.md
@@ -4,7 +4,7 @@
 
 > Author: #NellNell 
 Last update: *21/08/2021* 
-Links: [[想好再干]] [[非礼勿言]] [[学生思维]] [[逻辑思维]] [[核心能力]] [[独立思考]] [[思考非直觉]] [[差不多就好]] [[差不多得了]] 
+Links: [[想好再干]] [[非礼勿言]] [[学生思维]] [[逻辑思维]] [[核心能力]] [[独立思考]] [[无语言的思考]] [[差不多就好]] [[差不多得了]] 
 Tags:  #人生管理Life-Management #一法通万法通SthOfEverything 
 
 
