--- a/Nell Nell/听懂.md
+++ b/Nell Nell/听懂.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *21/08/2021* 
-Links: [[核心能力]] [[尊重]] [[一点就透]] [[尊师]] [[爱 - Caritas]]
+Links: [[核心能力]] [[尊重]] [[悟性2]] [[尊师]] [[爱 - Caritas]]
 Tags: #人生管理Life-Management #一法通万法通SthOfEverything #爱Caritas 
 
 听懂别人话的能力。
