--- a/Nell Nell/艰难的话题.md
+++ b/Nell Nell/艰难的话题.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *03/08/2021* 
-Links: [[教育的及格线]] [[父母之爱]] [[服从]] 
+Links: [[教育的及格线]] [[拼命解决]] [[服从]] 
 Tags: #教育Education #人生管理Life-Management #人性与心理HumanityAndPsychology 
   
 
