--- a/John Hexa/吃老虎的猪.md
+++ b/John Hexa/吃老虎的猪.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *01/10/2021* 
-Links: [[一点就透]] [[聪明人]] [[极度聪明]] [[笨聪明]] [[聪明的笨功夫]] [[城府]] [[成熟]] [[稳重]] [[能力与责任]] [[责任感]] [[世界史]] [[自然法]]
+Links: [[悟性2]] [[聪明人]] [[极度聪明]] [[笨聪明]] [[聪明的笨功夫]] [[城府]] [[成熟]] [[稳重]] [[能力与责任]] [[责任感]] [[世界史]] [[自然法]]
 Tags: #家族Clan #教育Education #社科Social-Science #自然法Natural-Law #人性与心理HumanityAndPsychology 
 
 
