--- a/John Hexa/在意讨厌.md
+++ b/John Hexa/在意讨厌.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *01/09/2021* 
-Links: [[被讨厌]] [[求学]] [[尊师]] [[三观可塑期]] [[服从]] [[世界史]] [[一点就透]] [[聪明论]] [[聪明误]] [[悲观与乐观]] [[过分在意]]
+Links: [[被讨厌]] [[求学]] [[尊师]] [[三观可塑期]] [[服从]] [[世界史]] [[悟性2]] [[聪明论]] [[聪明误]] [[悲观与乐观]] [[过分在意]]
 Tags: #人生管理Life-Management #人性与心理HumanityAndPsychology #一法通万法通SthOfEverything 
   
 
