--- a/John Hexa/学好会计.md
+++ b/John Hexa/学好会计.md
@@ -3,8 +3,8 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links:
-Tags:  #家族Clan
+Links: [[高等教育]] [[核心能力]] [[学好语文]] [[世界史]] 
+Tags:  #家族Clan #好物推荐ChefZRecomm #教育Education 
 
 
 
