--- a/John Hexa/悟性1.md
+++ b/John Hexa/悟性1.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[永远忐忑]] [[功夫]] [[SOP - 蒸蛋羹]] [[一点就透]] [[尊师]] [[学与玩]] [[学习]] [[世界史]] [[过渡性价值观]]
+Links: [[永远忐忑]] [[功夫]] [[SOP - 蒸蛋羹]] [[悟性2]] [[尊师]] [[学与玩]] [[学习]] [[世界史]] [[过渡性价值观]]
 Tags:  #一法通万法通SthOfEverything #教育Education #家族Clan #第一性Feminism
 
 
