--- a/John Hexa/热烈.md
+++ b/John Hexa/热烈.md
@@ -5,6 +5,7 @@
 Last update: *25/09/2021* 
 Links: [[亲近]] [[爱 - Caritas]] [[走到一起]] [[一生之诺]] [[理想婚姻]] [[John Hexa/值得一嫁]] [[Nell Nell/值得一嫁]] [[责任感]] [[John Hexa/成熟]] [[成熟特质]] [[理性的爱]] [[从心所欲不逾矩]]
 Tags: #爱Caritas #人生管理Life-Management #一法通万法通SthOfEverything #亲密关系Intimate-Relationship #教育Education 
+沙海拾金： [[走到一起.PNG]]
 
 
 这个问题，最大的要害在于你怎么理解“热烈”。
