--- a/John Hexa/父母之难.md
+++ b/John Hexa/父母之难.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[父母之爱]] [[父母惩戒权]] [[服从]] [[原谅]] [[不原谅的诅咒]]
+Links: [[拼命解决]] [[父母惩戒权]] [[服从]] [[原谅]] [[不原谅的诅咒]]
 Tags: #教育Education #社科Social-Science #爱Caritas #人性与心理HumanityAndPsychology #自然法Natural-Law 
 
  
