--- a/John Hexa/父母的支持.md
+++ b/John Hexa/父母的支持.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *27/06/2021* 
-Links: [[服从]] [[父母之爱]] [[父母之难]] [[父母惩戒权]] [[John Hexa/义教]]
+Links: [[服从]] [[拼命解决]] [[父母之难]] [[父母惩戒权]] [[John Hexa/义教]]
 Tags: #教育Education #家族Clan #爱Caritas #人生管理Life-Management #一法通万法通SthOfEverything 
   
 
