--- a/John Hexa/瑞幸.md
+++ b/John Hexa/瑞幸.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[股市]] [[港股暴跌]] 
+Links: [[股市]] [[两难]] 
 Tags:  #社科Social-Science #家族Clan #第一性Feminism
 
 
