--- a/John Hexa/看不到希望.md
+++ b/John Hexa/看不到希望.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *14/09/2021* 
-Links: [[朋友与学习]] [[悟性]] [[懂事]] [[年轻并不好]] [[过渡性价值观]] [[人心不古]] [[厉害思维]] [[一事无成]] [[劝退]] [[聪明的境界]] [[聪明的笨功夫]] [[苦熬 - 之一]] [[悲观与乐观]] [[世界史]] [[祈祷与祝福]] [[祷告观]] [[低贱的事情]] [[傲慢]] [[珍惜]] [[世面]] [[见世面]] 
+Links: [[朋友与学习]] [[悟性1]] [[懂事]] [[年轻并不好]] [[过渡性价值观]] [[人心不古]] [[厉害思维]] [[一事无成]] [[劝退]] [[聪明的境界]] [[聪明的笨功夫]] [[苦熬 - 之一]] [[悲观与乐观]] [[世界史]] [[祈祷与祝福]] [[祷告观]] [[低贱的事情]] [[傲慢]] [[珍惜]] [[世面]] [[见世面]] 
 Tags： #社科Social-Science #一法通万法通SthOfEverything #人生管理Life-Management #教育Education 
 
 
