--- a/John Hexa/谁的责任.md
+++ b/John Hexa/谁的责任.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *20/08/2021* 
-Links: [[尊师]] [[一点就透]] [[理解的原理]] [[反感吹牛]] [[求学]] [[喋喋不休]] [[核心能力]] [[条理]] [[复盘]] [[说服力的重量]] [[止争策略]] [[网暴]] [[否定女权的父亲]] [[评论冰箱]] [[提意见]]
+Links: [[尊师]] [[悟性2]] [[理解的原理]] [[反感吹牛]] [[求学]] [[喋喋不休]] [[核心能力]] [[条理]] [[复盘]] [[说服力的重量]] [[止争策略]] [[网暴]] [[否定女权的父亲]] [[评论冰箱]] [[提意见]]
 Tags: #人生管理Life-Management  #一法通万法通SthOfEverything 
   
 
