--- a/Nell Nell/致读者.md
+++ b/Nell Nell/致读者.md
@@ -6,6 +6,7 @@
 Last update: *25/08/2021* 
 Links: [[世界史]] [[致读者 - 之一]] [[致全体女性]] [[爱是行动.JPEG]]
 Tags: #人生管理Life-Management #一法通万法通SthOfEverything 
+沙海拾金： [[帮助者与被助者.JPG]]
 
   
 
