--- a/John Hexa/优先保护.md
+++ b/John Hexa/优先保护.md
@@ -5,7 +5,7 @@
 Last update: *14/09/2021* 
 Links: [[敌人]] [[人品]] [[危险迹象]] [[受伤害]] [[安全感]] [[医患关系 - 暴力]] [[绝对安全]] [[良知]] [[伤害应对]] [[人吃人]] [[自卫]] [[安全感]] [[乱伦]] [[两种伪善]] [[消除歧视]] [[小丑]] [[Circle-Of-Shame]]
 Tags:  #社科Social-Science #人生管理Life-Management #教育Education #家族Clan 
-沙海拾金： [[公平因果]] 
+沙海拾金： [[沙海拾金/公平因果]] 
   
 涉及针对律师、检察官、法官、警察的暴力犯罪，对社会安全的威胁是根本性的。
 
