--- a/John Hexa/萌.md
+++ b/John Hexa/萌.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[菊与刀]] 
+Links: [[忠与叛]] 
 Tags:  #社科Social-Science #家族Clan #第一性Feminism #人性与心理HumanityAndPsychology 
 
 
