--- a/Nell Nell/双标.md
+++ b/Nell Nell/双标.md
@@ -5,7 +5,7 @@
 Last update: *12/08/2021* 
 Links: [[道德]] [[鄙视白左]] [[John Hexa/正义]] [[生而平等]] [[男女平等]] [[不建天国]]
 Tags: #人性与心理HumanityAndPsychology #社科Social-Science 
-沙海拾金：[[公平因果]]
+沙海拾金：[[沙海拾金/公平因果]]
   
 
 指责双标的人，其实是对“**公平”怀有强烈的执念**。
