--- a/John Hexa/不准参赛.md
+++ b/John Hexa/不准参赛.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *01/09/2021* 
-Links: [[文化输出]] [[文化]] [[菊与刀]] [[爱国行为]] [[爱国情绪]] [[何谓中国人]] [[所谓民族]] [[所谓国籍]] [[仇日]]
+Links: [[文化输出]] [[文化]] [[忠与叛]] [[爱国行为]] [[爱国情绪]] [[何谓中国人]] [[所谓民族]] [[所谓国籍]] [[仇日]]
 Tags: #社科Social-Science #人性与心理HumanityAndPsychology 
   
 
