--- a/John Hexa/俄罗斯.md
+++ b/John Hexa/俄罗斯.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *14/09/2021* 
-Links: [[菊与刀]] [[反犹]] [[埃及文明]] [[至极浪漫]] [[史诗感]] [[联盟陆军]] [[和平演变]] [[海外团结]]
+Links: [[忠与叛]] [[反犹]] [[埃及文明]] [[至极浪漫]] [[史诗感]] [[联盟陆军]] [[和平演变]] [[海外团结]]
 Tags: #社科Social-Science #世界历史World-History 
 
 独一无二的土地，自然有独一无二的人民。独一无二，本身就是魅力的保证。
