--- a/John Hexa/自然法.md
+++ b/John Hexa/自然法.md
@@ -5,7 +5,7 @@
 Last update: *23/07/2021* 
 Links:
 Tags:  #社科Social-Science #自然法Natural-Law  #家族Clan #第一性Feminism
-沙海拾金： [[公平因果]]
+沙海拾金： [[沙海拾金/公平因果]]
 
 
 **自然法是什么？**
