--- a/John Hexa/学好会计.md
+++ b/John Hexa/学好会计.md
@@ -4,7 +4,7 @@
 > Author: #JohnHexa
 Last update: *23/07/2021* 
 Links: [[高等教育]] [[核心能力]] [[学好语文]] [[世界史]] 
-Tags:  #家族Clan #好物推荐ChefZRecomm #教育Education 
+Tags:  #家族Clan #好物推荐ChefZRecomm #教育Education #必备技能Core-skills 
 
 
 
