--- a/John Hexa/疗愈艺术.md
+++ b/John Hexa/疗愈艺术.md
@@ -4,7 +4,7 @@
 > Author: #JohnHexa
 Last update: *23/07/2021* 
 Links: [[John Hexa/欣赏]] [[三合一]] [[雅俗共赏]] [[艺术之美]] [[艺术本质]]
-Tags: #文化艺术Art #第一性Feminism #人性与心理HumanityAndPsychology 
+Tags: #文化艺术Art #第一性Feminism #人性与心理HumanityAndPsychology #必备技能Core-skills 
 
 
 
