--- a/Nell Nell/不受待见的老实人.md
+++ b/Nell Nell/不受待见的老实人.md
@@ -2,10 +2,109 @@
 *为什么部分女生不愿和「老实人」谈恋爱？*
 
 > Author: #NellNell 
-Last update: *03/08/2021* 
+Last update: *28/08/2021* 
 Links:
 Tags: 
   
+  【修订后】
+  
+现在人不喜欢"老实人"，有一个很重要的原因就是觉得“老实人”会吃亏。
+
+但“吃亏”其实有两种。
+
+一种是因为**尊重规律、规律被破坏了而吃亏**。另一种是因为**不了解规律、碰触了红线而吃亏**。
+
+严格来说，只有第一种才能叫老实。
+
+按照正确思路解题却因为某些原因得零分和不知道怎么解题得零分不是一回事。
+
+老实人解题方法没错，只不过后来题目被调换了，还有人提前拿到了答案，结果得了零分。
+
+**这不是“老实人”的错，是调换考题和偷考卷人的错。**
+
+“老实人”之所以成为贬义词，就是因为在某个特定历史时期，偷考卷的行为不仅不被惩罚，还被奖赏，正常答题的反而被落在了后面。这种“吃亏”让“老实”变成了贬义词。
+
+但是，**这并不是历史上的常态，我也不认为它会成为未来的方向**。
+
+---
+
+“老实”一度是被人赞誉的。
+
+人类进入现代社会以前，社会组织形态几千年没啥大改变。因此人只要遵循祖先遗留的经验、听从长老的命令、尊重自然和社会的规律，基本上就能保证平静安稳的一生。
+
+因此“老实”在过去那个时代，确实是很大的优点。
+
+“老实人”对规律和事实有一个基本的认知，并忠实地按照这个认知行事。
+
+“老实”最大的忌讳就是去破坏规律，或者侥幸绕过规律。因为事实证明，任何鲁莽和侥幸都会带来严重的伤亡或流放的后果。
+
+因此做人要老实，这是社会上普遍认可的美德。
+
+---
+
+但是我们经历了一段特殊的历史时期。
+
+其实中国社会直到改开之前，“老实”也都是一个受人羡慕的品格评判。
+
+然后改开之后三十年间，考卷换了。
+
+为什么说这是一段特殊的历史时期呢？因为很多规律被打破了，秩序被翻转了，过去重要的题突然不重要了，许多听都没听过的题突然变成了最重要的得分项。它允许一些人“犯规”却不受惩罚，也允许了一些用正确思路解题的人落在了偷考卷人的后面。
+
+这些事情都是在一种特殊的背景下发生的。
+
+这个背景就是我们必须要以一部分人的富裕来带动全国的脱贫和发展。
+
+为了这个目的，的确会有不合规范、打破常规的现象发生。比如鼓励冒险和投机，允许一夜暴富一夕成名，阶级迁越成为大多数人的梦想，每个人都希望走捷径、获取财富密码，期待幸运从天而降。
+
+这个时代的精神气质的确不是“老实”，“老实”这个品质被暂时性的嫌弃了。
+
+**为什么说“暂时”呢？因为这种时代精神代价极大，它会过度消耗人们对事实和规律的敬畏，而这种消耗是不可持续的。**
+
+一旦脱贫的目标达到，社会很快就会回到正轨。而一旦回归，所有的规则即将就位。
+
+2020年中国全面脱贫，这不仅是一个经济讯号，更是一个时代精神要大变的讯号。
+
+你可以观察一下这一年来的新闻，在惩治什么、鼓励什么？
+
+**——在惩治“违规操作”，在鼓励“建立规范”。**
+
+这个发展趋势应该非常清晰了吧？长远看来，老实人才是笑到最后的人。
+
+---
+
+抛开历史语境，**“**老实”是**生命运行的基本原则。**
+
+“细胞自动机”是一种模拟生命发展的算法。在“细胞自动机”里，有无数个小方格，初始方格获得一个指定状态，后面的方格按照一定的规律由之前的方格演化而来。最后演化出来的图案，你是无法通过公式获得的，必须老老实实一格一格计算得来。
+
+**万物生长，就是要遵循“老实”的原则。**
+
+树从一颗种子开始，雪花从第一片晶体开始，人从一个胚胎开始，到参天大树，到雪花纷飞，到长大成人，这中间的发展一步都不能跳跃。没有人从1岁不经过2岁就跳到3岁，3岁的你不能从1岁的你推导而来，必须得经过那一年365天日复一日的变化而来。
+
+任何生命的成长、事物的发展，都是如此。没有捷径，必须一步一个脚印，没有谁可以直达终点。
+
+老实就是这样，必须要经过那些没有办法跳过的步骤才能达到目标。练习生每天挥汗如雨才能出道，做科研要吭哧吭哧收集数据，农作物要一天天耕耘。这些都是基本的规律，只能老老实实做足功夫，没有捷径可走。
+
+发明创新也不违背老实的原则。发明创新不是超越规律，更不是违背规律。而是在一次次的重复中发现规律，一遍遍验证、修正，证明了其有效性才是有价值的发明创新。这中间更是一点捷径没有。
+
+药物研发中的每一步都是非常严格的标准和流程，别说不老实，就是配液中手多抖一下都不行，不能重复的结果和数据是没有意义的。
+
+所以老实怎么会过时？这个世界就是为老实人量身定做的。
+
+事实和规律胜于一切，以破坏规律为手段的时代必然是暂时和不持久的。而且为了弥补曾经的损失和对社会生态的破坏，一定会以更严格的态度重建和执行秩序和规律。
+
+所以接下来其实是老实人重获得青睐的年代。
+
+看准了这点，对你职业规划会大有助益。
+
+为什么呢？
+
+**因为现在看来，建立规范是我国各个领域发展的重中之重。将来最稀缺最重要的行业之一一定是与“规范化管理”相关的。**
+
+好了，点到为止。
+
+  ---
+  
+  【修订前】
 
 更新了「企业家精神」「企业家精神和美德」两部分。（_说实话，评论区有些人真的很傻，他们总是看不到信息背后的价值，更看不到如何使用这些信息令他们的生活增值。太遗憾了。_）
 
@@ -132,3 +231,7 @@ Tags:
 以下是给能看到观点价值的同学的福利：
 
 [如何看待焦越清华考研笔试第一复试被刷后称被「性别歧视」？​www.zhihu.com![图标](https://zhstatic.zhihu.com/assets/zhihu/editor/zhihu-card-default.svg)](https://www.zhihu.com/question/316439253/answer/626282558)[作为研究生，你认为导师应该遵守哪些行为准则？​www.zhihu.com![图标](https://zhstatic.zhihu.com/assets/zhihu/editor/zhihu-card-default.svg)](https://www.zhihu.com/question/317549452/answer/633409325)[社科其他​www.zhihu.com![图标](https://zhstatic.zhihu.com/assets/zhihu/editor/zhihu-card-default.svg)](https://www.zhihu.com/collection/313819737)
+
+---
+
+
