--- a/John Hexa/买鱼.md
+++ b/John Hexa/买鱼.md
@@ -4,7 +4,7 @@
 > Author: #JohnHexa
 Last update: *23/07/2021* 
 Links: [[出手]] [[循环买卖]] [[爱 - Caritas]]
-Tags:  #家族Clan #人生管理Life-Management #社科Social-Science #人性与心理HumanityAndPsychology 
+Tags:  #家族Clan #人生管理Life-Management #社科Social-Science #人性与心理HumanityAndPsychology #必备技能Core-skills 
 
 
 
