--- a/John Hexa/核心能力.md
+++ b/John Hexa/核心能力.md
@@ -4,7 +4,7 @@
 > Author: #JohnHexa
 Last update: *23/07/2021* 
 Links: [[功夫]] [[学好语文]] [[爱 - Caritas]] [[文科生]] [[学习哲学 - 之一]] [[家族]] [[学会]] [[世界史]] [[精英]]
-Tags:  #家族Clan #人生管理Life-Management #第一性Feminism #一法通万法通SthOfEverything 
+Tags:  #家族Clan #人生管理Life-Management #第一性Feminism #一法通万法通SthOfEverything #必备技能Core-skills 
 沙海拾金：[[核心能力 - 房屋布局表述]]
 
 
