--- a/John Hexa/丧尸.md
+++ b/John Hexa/丧尸.md
@@ -1,9 +1,9 @@
-# 丧尸
+# 打僵尸
 *当全世界都爆发丧尸，哪里最安全?*
 
 > Author: #JohnHexa
-Last update: *23/07/2021* 
-Links: 
+Last update: *13/11/2021* 
+Links: [[终结终结者]]
 Tags: #科学与技术ScienceAndTech  #文化艺术Art/影视Movie #皮得还很一本正经 
 
  
