--- a/John Hexa/动物喝水.md
+++ b/John Hexa/动物喝水.md
@@ -1,8 +1,8 @@
-# 净水过滤
+# 动物喝水
 *为什么人类喝地球的水需要过滤，而其他任何一种地球的生物可以直接喝地球的水?*
 
 > Author: #JohnHexa
-Last update: *23/07/2021* 
+Last update: *13/11/2021* 
 Links: [[为什么臭]]
 Tags: #科学与技术ScienceAndTech/自然科学Natural-Science 
 
