--- a/John Hexa/占山为王.md
+++ b/John Hexa/占山为王.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links:  [[鹰与猫孰强]] [[猫和犬]] [[狗啃骨头猫吃鱼]] [[各行其道]]
+Links:  [[鹰与猫孰强]] [[猫山王]] [[狗啃骨头猫吃鱼]] [[各行其道]]
 Tags: #科学与技术ScienceAndTech/自然科学Natural-Science 
 
  
