--- a/John Hexa/史诗感.md
+++ b/John Hexa/史诗感.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[爱情 - Romance]]
+Links: [[John Hexa/爱情 - Romance]]
 Tags: #社科Social-Science #文化艺术Art/文学Literal-Art 
 
  
