--- a/John Hexa/快餐式.md
+++ b/John Hexa/快餐式.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *15/10/2021* 
-Links: [[恋爱原理]] [[John Hexa/值得一嫁]] [[值得一睡]] [[不予考虑]] [[John Hexa/立场分歧]] [[爱得痛苦]] [[John Hexa/缺爱]] [[可爱 - Loveable]] [[防早恋]] [[伤害应对]] [[受伤害]]  [[情侣话题]] [[何如不问]] [[防早恋]] [[爱得痛苦]] [[恋爱原理]] [[Easy Girl]] [[授信技术]] [[先轻信后多疑]] [[结婚条件]] [[爱情 - Romance]] [[前途与爱情]] [[思而行]] [[John Hexa/立场分歧]] [[别互补]]
+Links: [[恋爱原理]] [[John Hexa/值得一嫁]] [[值得一睡]] [[不予考虑]] [[John Hexa/立场分歧]] [[爱得痛苦]] [[John Hexa/缺爱]] [[可爱 - Loveable]] [[防早恋]] [[伤害应对]] [[受伤害]]  [[情侣话题]] [[何如不问]] [[防早恋]] [[爱得痛苦]] [[恋爱原理]] [[Easy Girl]] [[授信技术]] [[先轻信后多疑]] [[结婚条件]] [[John Hexa/爱情 - Romance]] [[前途与爱情]] [[思而行]] [[John Hexa/立场分歧]] [[别互补]]
 Tags: #亲密关系Intimate-Relationship #爱Caritas 
 
 如果你把结婚看作一种“不可逆的连体手术”一样的重大决策，那么你的决策过程该是什么样的？
