--- a/John Hexa/战略轰炸机.md
+++ b/John Hexa/战略轰炸机.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links:  [[固定翼飞机 & 直升机]] [[航母]] [[航空母舰]] [[弹道计算]] 
+Links:  [[固定翼飞机 & 直升机]] [[航母]] [[航空母舰]] [[弹道学]] 
 Tags:  #军事技术与艺术MilitaryTechAndArt  #家族Clan #第一性Feminism
 
 
