--- a/John Hexa/智力发展.md
+++ b/John Hexa/智力发展.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *23/07/2021* 
-Links:  [[脑机接口]] [[脑]] [[永生如何]]
+Links:  [[技术焦虑]] [[脑]] [[永生如何]]
 Tags: #科学与技术ScienceAndTech/自然科学Natural-Science 
 
  
