--- a/John Hexa/深层血管.md
+++ b/John Hexa/深层血管.md
@@ -1,8 +1,8 @@
-# 人体结构
+# 深层血管
 *假如血管不在皮肤表层，当代医学将会如何?*
 
 > Author: #JohnHexa
-Last update: *23/07/2021* 
+Last update: *13/11/2021* 
 Links: [[脑]] 
 Tags: #科学与技术ScienceAndTech/医学Medical-Science /医学Medical-Science
 
