--- a/John Hexa/知止.md
+++ b/John Hexa/知止.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[恋爱原理]] [[爱情 - Romance]] [[所托非人]]
+Links: [[恋爱原理]] [[John Hexa/爱情 - Romance]] [[所托非人]]
 Tags:  #家族Clan,  #第一性Feminism #爱Caritas #亲密关系Intimate-Relationship 
 沙海拾金： [[知止1.jpg]]
 
