--- a/Nell Nell/春捂秋冻.md
+++ b/Nell Nell/春捂秋冻.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *15/10/2021* 
-Links: [[为什么臭]] [[净水过滤]] [[简明格言]] 
+Links: [[为什么臭]] [[动物喝水]] [[简明格言]] 
 Tags: #社科Social-Science 
   
 
