--- a/Nell Nell/至极浪漫.md
+++ b/Nell Nell/至极浪漫.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *21/08/2021* 
-Links: [[爱 - Caritas]] [[爱情 - Romance]] 
+Links: [[爱 - Caritas]] [[John Hexa/爱情 - Romance]] 
 Tags: [[爱 - Caritas]]
 
 “耶路撒冷 的众女子啊， 我嘱咐你们： 不要惊动、不要叫醒我所亲爱的， 等他自己情愿 。”
