--- a/John Hexa/不配被爱.md
+++ b/John Hexa/不配被爱.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[爱情 - Romance]] [[爱 - Caritas]] [[爱的好处]] [[爱得痛苦]] [[恋爱原理]] [[德不配位]] [[重组家庭的难题]]
+Links: [[John Hexa/爱情 - Romance]] [[爱 - Caritas]] [[爱的好处]] [[爱得痛苦]] [[恋爱原理]] [[德不配位]] [[重组家庭的难题]]
 Tags:  #家族Clan #爱Caritas #人性与心理HumanityAndPsychology  #神学Theology 
 沙海拾金：[[不配被爱1.jpg]] [[不配被爱2.jpg]]
 
