--- a/John Hexa/弹道学.md
+++ b/John Hexa/弹道学.md
@@ -1,8 +1,8 @@
-# 弹道计算
+# 弹道学
 *牛顿力学诞生前弹道是如何计算的?*
 
 > Author: #JohnHexa
-Last update: *23/07/2021* 
+Last update: *13/11/2021* 
 Links: [[工程师]]
 Tags: #科学与技术ScienceAndTech/物理学Physics #军事技术与艺术MilitaryTechAndArt 
 
