--- a/John Hexa/技术焦虑.md
+++ b/John Hexa/技术焦虑.md
@@ -1,8 +1,8 @@
-# 脑机接口
+# 技术焦虑
 *马斯克用猪展示 Neuralink 脑机接口设备，有哪些亮点和槽点？未来有望应用在人脑吗?*
 
 > Author: #JohnHexa
-Last update: *23/07/2021* 
+Last update: *13/11/2021* 
 Links: [[脑]]
 Tags: #社科Social-Science #科学与技术ScienceAndTech/医学Medical-Science 
 
