--- a/John Hexa/爱怕了.md
+++ b/John Hexa/爱怕了.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *20/07/2021* 
-Links: [[爱情 - Romance]] [[爱 - Caritas]] [[恋爱原理]] [[无条件的爱]] [[优秀与被爱]] [[前途与爱情]] [[理性的爱]] [[John Hexa/不配被爱]] [[凭爱分手]] [[爱无筹码]] [[爱的资格]]
+Links: [[John Hexa/爱情 - Romance]] [[爱 - Caritas]] [[恋爱原理]] [[无条件的爱]] [[优秀与被爱]] [[前途与爱情]] [[理性的爱]] [[John Hexa/不配被爱]] [[凭爱分手]] [[爱无筹码]] [[爱的资格]]
 Tags: #亲密关系Intimate-Relationship #人生管理Life-Management #第一性Feminism 
   
 
