--- a/John Hexa/猫山王.md
+++ b/John Hexa/猫山王.md
@@ -1,8 +1,8 @@
-# 猫和犬
+# 猫山王
 *猫科动物战斗力那么强，为什么没有将犬科动物淘汰掉?*
 
 > Author: #JohnHexa
-Last update: *23/07/2021* 
+Last update: 13/11/2021* 
 Links: [[占山为王]] [[猫咪习性]]
 Tags: #科学与技术ScienceAndTech/自然科学Natural-Science 
 
