--- a/John Hexa/脑.md
+++ b/John Hexa/脑.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[脑机接口]]
+Links: [[技术焦虑]]
 Tags: #社科Social-Science #科学与技术ScienceAndTech/医学Medical-Science 
 
  
