--- a/John Hexa/尊重的实践.md
+++ b/John Hexa/尊重的实践.md
@@ -5,7 +5,7 @@
 Last update: *27/06/2021* 
 Links: [[尊重]] [[尊师]] [[傲慢]] [[爹味]]
 Tags:  #家族Clan  #人生管理SOP  #企业管理B-Management 
-沙海拾金： [[尊重的实践1.jpg]] [[尊重的实践2.jpg]] [[尊重的实践3.jpg]] [[尊重的实践4.jpg]]
+沙海拾金： [[尊重的实践1.jpg]] [[尊重的实践2.jpg]] [[尊重的实践3.jpg]] [[尊重的实践4.jpg]] [[礼貌与尊重1.jpeg]] [[礼貌与尊重2.jpg]] [[礼貌与尊重3.jpg]] [[要赢还是爽.jpg]] [[人与兽.jpg]] [[职业性残疾.jpg]] [[以直报怨与尊重.jpg]]
 
 
 
