--- a/John Hexa/情绪.md
+++ b/John Hexa/情绪.md
@@ -3,8 +3,9 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links:
+Links: [[情绪管理]] [[情绪控制]] [[负面情绪]]
 Tags:  #社会科学Social-Science #家族Clan #第一性Feminism
+沙海拾金： [[狠厉1.jpg]] [[狠厉2.jpg]]
 
 
 
