--- a/John Hexa/不建天国.md
+++ b/John Hexa/不建天国.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[理想所需]] [[坚守理想]]
+Links: [[理想的能力]] [[坚守理想]]
 Tags:  #社会科学Social-Science
 
 
