--- a/John Hexa/世故青年.md
+++ b/John Hexa/世故青年.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[信仰是什么]] [[悲观与乐观]] [[爱 - Caritas]] [[可信]] [[精英]] [[理想所需]] [[坚守理想]] [[苦熬]] [[苦熬1]]
+Links: [[信仰是什么]] [[悲观与乐观]] [[爱 - Caritas]] [[可信]] [[精英]] [[理想的能力]] [[坚守理想]] [[苦熬]] [[苦熬1]]
 Tags:  #家族Clan #人生管理SOP   
 
 
