--- a/John Hexa/真正想做的事.md
+++ b/John Hexa/真正想做的事.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *20/07/2021* 
-Links: [[功夫]] [[爱得痛苦]] [[坚守理想]] [[励志]] [[理想所需]] 
+Links: [[功夫]] [[爱得痛苦]] [[坚守理想]] [[励志]] [[理想的能力]] 
 Tags: #人生管理SOP #第一性Feminism 
 
 
