--- a/John Hexa/静气.md
+++ b/John Hexa/静气.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *07/08/2021* 
-Links: [[不紧张]] [[踏实]] [[稳重]] [[傲慢]] [[亦真亦幻]] [[凶不起]] [[烦躁]] [[逃避伤害]] [[做计划]] [[SOP - 蒸蛋羹]] [[John Hexa/聪明人]] [[安全感]] [[真正想做的事]] [[浪费生命的事]] [[父母的支持]] [[理想所需]]
+Links: [[不紧张]] [[踏实]] [[稳重]] [[傲慢]] [[亦真亦幻]] [[凶不起]] [[烦躁]] [[逃避伤害]] [[做计划]] [[SOP - 蒸蛋羹]] [[John Hexa/聪明人]] [[安全感]] [[真正想做的事]] [[浪费生命的事]] [[父母的支持]] [[理想的能力]]
 Tags:   #社会科学Social-Science  #家族Clan  #人生管理SOP  
   
 
