--- a/Nell Nell/企业家精神.md
+++ b/Nell Nell/企业家精神.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *29/10/2021* 
-Links: [[爱 - Caritas]] [[财富观]] [[净输出者]] [[事业已定]] [[理想所需]] [[理性的爱]] [[Nell Nell/缺爱]] [[缺爱者的自救]]
+Links: [[爱 - Caritas]] [[财富观]] [[净输出者]] [[事业已定]] [[理想的能力]] [[理性的爱]] [[Nell Nell/缺爱]] [[缺爱者的自救]]
 Tags: #社会科学Social-Science 
   
 
