--- a/Nell Nell/允许遗憾.md
+++ b/Nell Nell/允许遗憾.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *08/09/2021* 
-Links: [[后悔]] [[人生的意义]] [[今生之意]] [[坚持]] [[可信]] [[励志]] [[理想所需]] [[坚守理想]] [[工作的意义]] [[选择的自由]] [[前途的选择]] [[英雄]] [[英雄 1]] [[不破灭]] [[John Hexa/值得一嫁]] [[恋爱原理]] [[感情测试]] [[接受但不允许]] [[爱得勉强]] [[真正想做的事]] [[自视]] [[接受现实]] [[莫失莫忘]]
+Links: [[后悔]] [[人生的意义]] [[今生之意]] [[坚持]] [[可信]] [[励志]] [[理想的能力]] [[坚守理想]] [[工作的意义]] [[选择的自由]] [[前途的选择]] [[英雄]] [[英雄 1]] [[不破灭]] [[John Hexa/值得一嫁]] [[恋爱原理]] [[感情测试]] [[接受但不允许]] [[爱得勉强]] [[真正想做的事]] [[自视]] [[接受现实]] [[莫失莫忘]]
 Tags: #人生管理SOP 
 
 你要允许人生有遗憾。
