--- a/John Hexa/厉害思维.md
+++ b/John Hexa/厉害思维.md
@@ -3,8 +3,8 @@
 
 > Author: #JohnHexa
 Last update: *14/07/2021* 
-Links:
-Tags: #家族Clan #人生管理SOP  
+Links: [[功夫]] [[聪明的笨功夫]] [[保持单纯]] [[不抱怨]] [[悲观与乐观]] [[FURY]] [[Sin]] [[John Hexa/送你一句话]]
+Tags: #人生管理SOP  
 
  
 所谓厉害的人，当然是拥有很多处理问题的技巧。但你如果认为这只是学习的事，你就看错方向了。
