--- a/Nell Nell/善良.md
+++ b/Nell Nell/善良.md
@@ -3,8 +3,8 @@
 
 > Author: #NellNell 
 Last update: *20/08/2021* 
-Links:
-Tags: 
+Links: [[真正善良]] [[有重量的善良]] [[善良程度]]
+Tags: #社会科学Social-Science 
 
   
 
