--- a/摘抄本/摘抄 - 励志金句.md
+++ b/摘抄本/摘抄 - 励志金句.md
@@ -279,6 +279,17 @@
 
 ---
 
+勇于任事，甘冒风险，受责无怨。  
+“勇于任事”不见得是爱，“甘冒风险”也不见得是爱，“受责无怨”却一定是。  
+  
+你们不是问什么是爱吗？  
+  
+这个就是爱。  
+  
+任何人这样对你们，ta所做的事情，就称为爱。
+
+---
+
 
 
 
