--- a/John Hexa/条理.md
+++ b/John Hexa/条理.md
@@ -5,7 +5,7 @@
 Last update: *23/07/2021* 
 Links: [[学好语文]] [[逻辑思维]] [[核心能力]] [[碎片信息]]
 Tags:  #家族Clan #第一性Feminism #人生管理SOP 
-沙海拾金： [[有条理.jpeg]]
+沙海拾金： [[有条理SOP.jpeg]]
 
 
 
