--- a/John Hexa/城府.md
+++ b/John Hexa/城府.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[致读者1.jpg]] [[财富观]] [[祷告观]] [[奢侈品消费]] [[功夫]] [[John Hexa/成熟]] [[成熟特质]] [[John Hexa/不幼稚]] [[不幼稚 - 之二]]
+Links: [[致读者1.jpg]] [[财富观]] [[祷告观]] [[奢侈品消费]] [[功夫]] [[John Hexa/成熟]] [[成熟特质]] [[John Hexa/不幼稚]] 
 Tags:  #社会科学Social-Science #家族Clan #人生管理SOP 
 
 
