--- a/John Hexa/底线.md
+++ b/John Hexa/底线.md
@@ -3,8 +3,8 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[爱 - Caritas]]
-Tags:  #家族Clan  
+Links: [[人格分型]] [[讨好型人格]] [[严刑拷打]]
+Tags:  #社会科学Social-Science 
 
 
 
