--- a/John Hexa/父权.md
+++ b/John Hexa/父权.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *04/09/2021* 
-Links: [[平权]] [[尊师]] [[双胞胎]] [[母系社会]] [[服从]] [[天人合一]] [[天赋特权]] [[爹味]] [[棱角分明]] [[上层家庭]] [[正面刚]] [[Nell Nell/教养]] [[John Hexa/教养]] [[傲慢]] [[傲慢之路]] [[气泡膜]] [[躺平]] [[John Hexa/不幼稚]] [[不幼稚 - 之二]]
+Links: [[平权]] [[尊师]] [[双胞胎]] [[母系社会]] [[服从]] [[天人合一]] [[天赋特权]] [[爹味]] [[棱角分明]] [[上层家庭]] [[正面刚]] [[Nell Nell/教养]] [[John Hexa/教养]] [[傲慢]] [[傲慢之路]] [[气泡膜]] [[躺平]] [[John Hexa/不幼稚]] 
 Tags: #人生管理SOP #社会科学Social-Science  
 
 
