--- a/John Hexa/大叔控.md
+++ b/John Hexa/大叔控.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [社科答集](https://zhihu.com/collection/304176992) [[John Hexa/不幼稚]] [[不幼稚 - 之二]] [[John Hexa/性感男人]] 
+Links: [[John Hexa/不幼稚]] [[John Hexa/性感男人]] 
 Tags: #社会科学Social-Science 
 
  
