--- a/John Hexa/天赋.md
+++ b/John Hexa/天赋.md
@@ -5,6 +5,7 @@
 Last update: *25/09/2021* 
 Links: [[天赋特权]] [[高估]] [[蠢聪明]] [[悟性1]] [[悟性2]] [[厉害思维]] [[John Hexa/极度聪明]] [[自视]] [[精英]] [[求学]] [[功夫]] [[高等教育]] [[能力与责任]]
 Tags: #社会科学Social-Science #人生管理SOP  
+#沙海拾金： [[谏言.jpeg]]
 
 
 
