--- a/John Hexa/求学.md
+++ b/John Hexa/求学.md
@@ -5,6 +5,7 @@
 Last update: *23/07/2021* 
 Links: [[功夫]] [[教教我]] [[执行力]] [[做计划]] [[有困难就说]] [[祷告观]] [[财富观]] [[奢侈品消费]] [[学习]] [[核心能力]] [[学好语文]] [[学好会计]] [[尊师]] [[尊重]] [[征求建议]] [[受欢迎]] [[有修养]] [[道德]]
 Tags:  #家族Clan #第一性Feminism #人生管理SOP 
+沙海拾金： [[谏言.jpeg]]
 
 
 
