--- a/John Hexa/3D打印 - 喷头坏了.md
+++ b/John Hexa/3D打印 - 喷头坏了.md
@@ -1,10 +1,10 @@
-# 3D打印 - 坏了
+# 3D打印 - 喷头坏了
 *为什么我的3D打印机喷头出不来料，而且把料手动退出来时是这样的（见图）？？?*
 
 > Author: #JohnHexa
 Last update: *23/06/2021* 
 Links: [[3D打印 - 骗局]]
-Tags:  
+Tags: #应用科学Applied-Science 
 
  
 喷头的加热部件坏了，也可能是温度探头坏了。
