--- a/John Hexa/5G - 速度.md
+++ b/John Hexa/5G - 速度.md
@@ -4,7 +4,7 @@
 > Author: #JohnHexa
 Last update: *23/06/2021* 
 Links: [[5G - 远程医疗]] [[5G - 未来展望2]] [[5G - 未来展望1]] [[5G - 被黑]]  [[5G - 热度]]  [[聪明的境界]] [[5G - 耗电]] [[5G - 赛道]] [[5G - 经贸协议]] 
-Tags:   #社会科学Social-Science  
+Tags:   #社会科学Social-Science  #应用科学Applied-Science 
 
  
 在座各位在家使用有线连接的举手看看——也就是电脑插根网线上网，手机插根数据线上网（充电可不算）。
