--- a/John Hexa/圣经 - 约伯.md
+++ b/John Hexa/圣经 - 约伯.md
@@ -1,11 +1,11 @@
-# 圣经 - 约伯记
+# 圣经 - 约伯
 *上帝和魔鬼打赌玩弄约伯的原因是什么？魔鬼为什么痛恨上帝？*
 
 > Author: #Anonymity 
 Last update: *23/07/2021* 
 Links: [[John Hexa/圣经 - 五饼二鱼]] [[爱 - Caritas]] [[信仰是什么]] [[信的力量]] [[使徒行传]] [[信仰质疑]]
 Tags: #神学Theology /宗教心理学PsychologyOfReligion 
-沙海拾金： [[约伯记1.jpg]] [[约伯记2.jpg]] [[约伯记3.jpg]] [[约伯记4.jpg]] [[约伯记5.jpg]] [[约伯记6.jpg]] [[约伯记7.jpg]] [[约伯记8.jpg]] [[约伯记9.jpg]]
+沙海拾金： [[约伯1.jpg]] [[约伯2.jpg]] [[约伯3.jpg]] [[约伯4.jpg]] [[约伯5.jpg]] [[约伯6.jpg]] [[约伯7.jpg]] [[约伯8.jpg]] [[约伯9.jpg]]
 
 
 
