--- a/John Hexa/安全感.md
+++ b/John Hexa/安全感.md
@@ -5,7 +5,7 @@
 Last update: *23/07/2021* 
 Links: Links:[[世界史]] [[悲观与乐观]] [[财富观]] [[理想]] [[信仰生命]] [[John Hexa/性感]][[职业规划]]
 Tags: #第一性Feminism #社会科学Social-Science     #亲密关系Intimate-Relationship 
-沙海拾金： [[安全感1.jpg]] [[安全感2.jpg]] [[SOP - 企业制度.jpeg]]
+沙海拾金： [[Caritas.jpg]] [[SOP - 企业制度.jpeg]]
 
 
 
