--- a/John Hexa/掐脖子的水电站.md
+++ b/John Hexa/掐脖子的水电站.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *27/06/2021* 
-Links: [[爱 - Caritas]] [[王天下]] [[圣经 - 约伯记]] [[自然法]]
+Links: [[爱 - Caritas]] [[王天下]] [[圣经 - 约伯]] [[自然法]]
 Tags:    
   
  
