--- a/摘抄本/摘抄 - 励志金句.md
+++ b/摘抄本/摘抄 - 励志金句.md
@@ -210,7 +210,7 @@
  
 ---
  
- 死亡不是逃避苦难的捷径。
+死亡不是逃避苦难的捷径。
 
 没有学到的功课，总还是要重新来过，直到学到为止。
  
@@ -239,11 +239,6 @@
 ---
 
 无论一方的逻辑多精致，客观指标上多优秀，只要把这些优势用在合理化对别人的不包容上，用在产生藐视和敌对上，那就是精致的弱小。 
-
-  
----
-
-厚学博览，宽纳善疑，赤子之心不弃，万丈之崖可攀。
 
 ---  
 
@@ -290,6 +285,19 @@
 
 ---
 
+简单来说，世界上没有“没有思想的人”——只要ta会算工资和找零钱，ta就有思想。
+
+所以世界上根本不存在“像动物一样的人”。
+
+世界上只有向自己或别人假装像动物一样的人。
+
+---
+
+**最高级别的修养，是一种【熊熊燃烧的愤怒】。只不过那种愤怒没有被用作杀人伤人的理由、不道德的资格、放纵的特许证，它被用在了隐忍、坚持和决绝的自制上。**
+
+**你的愤怒，只应该带给你新的义务，没有给你带来新的权利！**
+
+---
 
 
 
