--- a/John Hexa/5G - 未来展望2.md
+++ b/John Hexa/5G - 未来展望2.md
@@ -4,8 +4,7 @@
 > Author: #JohnHexa
 Last update: *23/06/2021* 
 Links: [[5G - 未来展望1]]
-Tags: #社会科学Social-Science    
-
+Tags: #应用科学Applied-Science 
  
 11.20看看：
 
