--- a/John Hexa/5G - 热度.md
+++ b/John Hexa/5G - 热度.md
@@ -4,7 +4,7 @@
 > Author: #JohnHexa
 Last update: *23/06/2021* 
 Links:  [[5G - 速度]] [[5G - 未来展望1]] [[5G - 未来展望2]] [[5G - 远程医疗]] 
-Tags: ##社会科学Social-Science    
+Tags: #应用科学Applied-Science 
 
  
 谢邀。
