--- a/John Hexa/5G - 被黑.md
+++ b/John Hexa/5G - 被黑.md
@@ -4,7 +4,7 @@
 > Author: #JohnHexa
 Last update: *23/06/2021* 
 Links: [[5G - 未来展望1]] [[5G - 未来展望2]] 
-Tags: ##社会科学Social-Science    
+Tags: ##社会科学Social-Science  #应用科学Applied-Science   
 
  
 讲真，现在在国内大力黑5G的各种言论在手法上和香港那边黑衣人和苹果日报的调门比较一下有很明显的相似性。
