--- a/John Hexa/“哲学家”.md
+++ b/John Hexa/“哲学家”.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links:
+Links: 
 Tags:  #社会科学Social-Science
 
 
@@ -16,9 +16,9 @@ Tags:  #社会科学Social-Science
 
 **中国基本上是不接受所谓“圣愚”的概念的，而大家不妨把话直接说透一些——事实上哲学家们在实践上就是“圣愚”。**
 
-**A fool, but a holy fool.#科学Science
+**A fool, but a holy fool.
 
-**Holy, but a fool nonetheless.#科学Science
+**Holy, but a fool nonetheless.
 
 中国文化基本上不接受“神圣而无效”这个基本逻辑，“复杂到无法理解”如果不配合上“言必有中”“料事如神”，是**纯扣分项**。
 
