--- a/John Hexa/值得一嫁.md
+++ b/John Hexa/值得一嫁.md
@@ -5,7 +5,7 @@
 Last update: *23/07/2021* 
 Links: [[恋爱原理]] [[不予考虑]] [[John Hexa/立场分歧]] [[正确的爱]]
 Tags:  #家族Clan #亲密关系Intimate-Relationship #人生管理SOP  
-沙海拾金： [[值得一嫁1.jpg]] [[值得一嫁2.jpg]] [[值得一嫁3.jpg]] [[值得一嫁4.jpg]] [[值得一嫁5.jpg]] [[值得一嫁6.jpg]] [[值得一嫁7.jpg]]
+沙海拾金： [[值得一嫁1.jpg]] [[值得一嫁2.jpg]] [[值得一嫁3.jpg]] [[值得一嫁4.jpg]] [[值得一嫁5.jpg]] [[值得一嫁6.jpg]] 
 
 
 是嫁给“爱我的人”，还是“我爱的人”呢？
