--- a/John Hexa/圣经 - 五饼二鱼.md
+++ b/John Hexa/圣经 - 五饼二鱼.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[圣经 - 约伯记]]
+Links: [[圣经 - 约伯]]
 Tags: #神学Theology #文化艺术Art/文学Literature 
 
  
