--- a/John Hexa/圣经 - 约拿书.md
+++ b/John Hexa/圣经 - 约拿书.md
@@ -3,7 +3,7 @@
 
   > Author: #JohnHexa 
 Last update: *16/07/2021* 
-Links: [[Sin]] [[原谅]] [[圣经 - Bible]] [[神迹]] [[爱 - Caritas]]  [[圣经 - 约伯记]]
+Links: [[Sin]] [[原谅]] [[圣经 - Bible]] [[神迹]] [[爱 - Caritas]]  [[圣经 - 约伯]]
 Tags: #神学Theology 
 
 
