--- a/John Hexa/燎原幻觉.md
+++ b/John Hexa/燎原幻觉.md
@@ -5,7 +5,7 @@
 Last update: *14/09/2021* 
 Links: [[可信标准]] [[信息来源]] [[膝盖的目的]] [[反恐]] [[长时间保持理性]] [[何为客观]] [[怎样读新闻]] [[“纪实”]] [[免于极端]] [[极端不忠诚]] [[反犹]] [[恐怖主义]] [[歧视因果]] [[斗争]] [[自私]] [[关心政治]] [[伟大的自私]] [[操纵]]
 Tags: #人生管理SOP #社会科学Social-Science  
-沙海拾金：[[不抱怨.JPEG]]
+沙海拾金：[[支持女权.jpeg]]
  
 
 人总是免不了期望自己看不惯的事情会造成严重后果的。有这期盼倒也罢了，人之常情，但是仅仅基于这个期盼就作为判断的依据，这是一种典型的wishful thinking。
