--- a/Nell Nell/自以为是的坚定.md
+++ b/Nell Nell/自以为是的坚定.md
@@ -3,7 +3,7 @@
 
 > Author: #NellNell 
 Last update: *21/08/2021* 
-Links: [[圣经 - 约伯记]] [[信与疑]] [[信的力量]] [[信仰质疑]] [[神学不可信]] [[修行成就者]]
+Links: [[圣经 - 约伯]] [[信与疑]] [[信的力量]] [[信仰质疑]] [[神学不可信]] [[修行成就者]]
 Tags: #神学Theology  
 
 不不，大部分信徒不是信仰坚定，**而是自以为信的很坚定而已。**
