--- a/John Hexa/无神论者.md
+++ b/John Hexa/无神论者.md
@@ -3,7 +3,7 @@
   
 > Author: #JohnHexa 
 Last update: *8/07/2021* 
-Links: [[可信]] [[上帝]] [[可信标准]] [[无神论]]
+Links: [[可信]] [[John Hexa/上帝]] [[可信标准]] [[无神论]]
 Tags: #神学Theology  
 
 这么说吧——在中国，严格意义上的无神论者能凑得齐四位数都够呛。
