--- a/摘抄本/摘抄 - 励志金句.md
+++ b/摘抄本/摘抄 - 励志金句.md
@@ -1,4 +1,4 @@
-# 金句摘抄
+# 摘抄 - 励志金句
 
 
 想做到做不到那叫退而求其次，做得到不去做这叫自误。
@@ -70,7 +70,6 @@
 ---
 
 —— 凡祈求的，就得着；寻找的，就寻见；叩门的，就给他开门。
-
 
 ---  
 
@@ -264,17 +263,21 @@
 ---
 
 世界上根本没有“没能力报复”这个情况。再弱小的人，也有能力报复。再弱小的报复，遇到了恰当的时机和运势，手无缚鸡之力之人的一句话都足可以致命了。
->任何人不报复，都是一种决定，一种迈向温柔的努力。世界必不轻看。
+
+任何人不报复，都是一种决定，一种迈向温柔的努力。世界必不轻看。
 
 ---
 
 任何人都不应该追求。
+
 追求只能用于“事业”，“成就”，**追求的宾语根本就不可以是人**。
+
 **心里装着别人的自由到了这一步的人，从来用不着追。**
 
 ---
 
 勇于任事，甘冒风险，受责无怨。  
+
 “勇于任事”不见得是爱，“甘冒风险”也不见得是爱，“受责无怨”却一定是。  
   
 你们不是问什么是爱吗？  
