--- a/摘抄本/生词本.md
+++ b/摘抄本/生词本.md
@@ -1,16 +1,59 @@
 # 生词本
 
-渊薮
+**渊薮** - /yuānsǒu/
+聚集；深广；深渊；根源；鱼和兽类聚居的处所。比喻某种人或事、物聚集的地方。
 
-旷量
+出处：
+《隶释·汉荆州刺史度尚碑》：智含渊薮，仁隆春煖，义高秋云，行絜冰霜。
 
-破片
+雨果《悲惨世界》：人心是妄念，贪欲和阴谋的污地，梦想的舞台，丑恶意念的渊薮，诡诈的都会，欲望的战场。在某些时候你不妨从一个运用心思的人的阴沉面容深入到他的肚皮里去，探索他的心情，研究他的思绪。在那种寂静的外表下就有荷马史诗中那种巨灵的搏斗，密尔顿诗中那种龙蛇的混战，但丁诗中那种幻想的萦绕。
 
-乡愿
+---
 
-绥靖
+**旷量** 
+指的是不影响机器精密的情况下，许可部件之间有一定的活动余地，以消除加工误差给部件连接的影响。
+
+---
+
+**破片**
+小碎块;不完全的部分
+
+关联词条：破片杀伤
+是指炮兵抛射物（炮弹）、炸弹、手榴弹等爆炸时，其内部的炸药将外壳撕成许多破片来杀伤目标的过程。
+
+---
+
+**乡愿**
+外貌忠厚老实，讨人喜欢，实际上却不能明辨是非的人。
+
+出处：
+《论语·阳货》子曰：‘**乡原**，德之贼也。’”
+
+《孟子·尽心下》：““孔子曰：‘过我门而不入我室，我不憾焉者，其惟**乡原**乎！**乡原**，德之贼也。’曰：何如斯可谓之乡原矣？”
+
+清王宜山《围炉夜话》第四章：“孔子何以恶乡愿，只为他似忠似廉，无非假面孔；孔子何以弃鄙夫，只因他患得患失，尽是俗人心肠。”
+
+汉徐干《中论·考伪》：“乡愿亦无杀人之罪，而仲尼恶之，何也？以其乱德也。” 
+
+李大钊 《乡愿与大盗》：“ 中国一部历史，是乡愿与大盗结合的纪录。”
+
+---
+
+**绥靖** - /suí jìng/
+绥，本义是借以登车的绳索，引申为安定、安抚。靖，安定之意。即以[安抚]（绥）的手段使局势安定（靖），又称为姑息主义。“慰抚”之意。引申为为求苟安而去做一些违反理性与原则的行为，甚至这种行为里还有一种非理性的纵容。
+
+关联词条：绥靖政策 （policy of appeasement）
+也称姑息政策。一种对侵略不加抵制，姑息纵容，退让屈服，以牺牲别国为代价，同侵略者勾结和妥协的政策。
+
+---
 
 浇奠
+
+波阱
+
+敕封
+
+信靠
 
 芜杂不纯
 
