--- a/John Hexa/三面围堵.md
+++ b/John Hexa/三面围堵.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[可信]] [[爱 - Caritas]] [[服从]] [[不原谅的诅咒]] [[亲子冲突]]
+Links: [[可信]] [[爱 - Caritas]] [[服从]] [[不原谅的诅咒]] [[亲子冲突]] [[John Hexa/批评]]
 Tags:  #家族Clan   #社会科学Social-Science   
 
 
