--- a/John Hexa/上帝 - 举石头.md
+++ b/John Hexa/上帝 - 举石头.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *24/07/2021* 
-Links: [[上帝]] [[Jehovah - 耶和华]] [[全知全能]] [[上帝 - 人格化]] [[上帝 - 存在]] [[John Hexa/上帝 - 杀人]]
+Links: [[John Hexa/上帝]] [[Jehovah - 耶和华]] [[全知全能]] [[上帝 - 人格化]] [[上帝 - 存在]] [[John Hexa/上帝 - 杀人]]
 Tags: #神学Theology 
 
 
