--- a/John Hexa/不原谅的诅咒.md
+++ b/John Hexa/不原谅的诅咒.md
@@ -4,9 +4,7 @@
 > Author: #JohnHexa
 Last update: *23/07/2021* 
 Links: [[爱 - Caritas]] [[原谅]] [[道歉]]
-Tags:    
-
-
+Tags: #家族Clan 
 
 
 **作为父母，你想防止子女做什么事情，千万、千万、千万不要说“如果你如何如何如何，我是不会原谅的”。**
