--- a/John Hexa/元宇宙.md
+++ b/John Hexa/元宇宙.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *13/11/2021* 
-Links: [[自然法]] [[非常之“非常”]] [[傲慢]] [[上帝]] [[MINECRAFT]] [[圣经 - Bible]] [[神的造物]] [[圣经 - 神的样子]] [[科技上限]] [[终极真理]] [[术不可补]] [[性命双修]] [[技术中立]]
+Links: [[自然法]] [[非常之“非常”]] [[傲慢]] [[John Hexa/上帝]] [[MINECRAFT]] [[圣经 - Bible]] [[神的造物]] [[圣经 - 神的样子]] [[科技上限]] [[终极真理]] [[术不可补]] [[性命双修]] [[技术中立]]
 Tags: #应用科学Applied-Science  
 
 真实世界的规则谁说了也不算，归自然规律说了算。
