--- a/John Hexa/咋知道的.md
+++ b/John Hexa/咋知道的.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa 
 Last update: *12/08/2021* 
-Links: [[世界史]] [[核心能力]] [[可信]] [[信仰自由]] [[独立思考]] [[滚滚向前]] [[John Hexa/宏大叙事]] [[大格局]] [[功罪千秋]] [[游戏史观]] [[文字狱]] [[史料不可信]] [[商人]] [[不喜孔子]] [[义和团]] [[反清复明]] [[商周奴隶制]] [[井田]] [[越人学远射]] [[文字张力]] [[学好语文]] [[怎样读新闻]] [[读《圣经》]] 
+Links: [[世界史]] [[核心能力]] [[可信]] [[信仰自由]] [[独立思考]] [[滚滚向前]] [[John Hexa/宏大叙事]] [[大格局]] [[功罪千秋]] [[游戏史观]] [[文字狱]] [[史料不可信]] [[商人]] [[孔子]] [[义和团]] [[反清复明]] [[商周奴隶制]] [[井田]] [[越人学远射]] [[文字张力]] [[学好语文]] [[怎样读新闻]] [[读《圣经》]] 
 Tags:    #社会科学Social-Science 
 
 
