--- a/John Hexa/圣经 - 神的样子.md
+++ b/John Hexa/圣经 - 神的样子.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity 
 Last update: *26/07/2021* 
-Links: [[上帝 - 人格化]] [[上帝]] [[上帝 - 存在]] [[爱 - Caritas]] [[John Hexa/自由意志]]
+Links: [[上帝 - 人格化]] [[John Hexa/上帝]] [[上帝 - 存在]] [[爱 - Caritas]] [[John Hexa/自由意志]]
 Tags: #神学Theology  
 
 这涉及到一个很严肃的问题——
