--- a/John Hexa/礼崩乐坏.md
+++ b/John Hexa/礼崩乐坏.md
@@ -3,7 +3,7 @@
 
 > Author: #JohnHexa
 Last update: *23/07/2021* 
-Links: [[不喜孔子]]
+Links: [[孔子]]
 Tags:  #社会科学Social-Science #家族Clan #第一性Feminism
 
 
