--- a/John Hexa/神独一.md
+++ b/John Hexa/神独一.md
@@ -3,7 +3,7 @@
  
 > Author: #Anonymity
 Last update: *23/07/2021* 
-Links: [[上帝 - 举石头]] [[上帝]]
+Links: [[John Hexa/上帝 - 举石头]] [[John Hexa/上帝]]
 Tags: #神学Theology 
 
 这是一个很有意思的问题。
