--- a/Nell Nell/独立女性.md
+++ b/Nell Nell/独立女性.md
@@ -2,107 +2,93 @@
 [什么是独立女性？](https://www.zhihu.com/question/23223076/answer/2275799698)
 
 > Author: #NellNell 
-Last update: *18/12/2021* 
+Last update: *31/12/2021* 
 Links: [[安全感]] [[幸福感]] [[独来独往]] 
 Tags: #第一性Feminism #社会科学Social-Science 
   
 
-未婚生子算什么，现在的女性不仅能独自养孩子，还能独自养三个。
+未婚生子这种事情，与其说体现了女性的独立，不如说是体现了社会的变迁。
 
-但是，这与其说体现了女性的独立，不如说是体现了社会的变迁。
+但生计所迫的独立不能算真正的独立。
 
-在传统社会，女性确实要依赖婚姻和生儿育女才有生存的空间。但在传统社会，大部分男性也必须要娶媳妇生孩子才有生存空间啊。娶不上媳妇、生不了子嗣那是不孝中的不孝，也没有几个男性担当的起。
+什么叫“生计所迫的独立”？这就要谈到现代“独立”的概念是怎么产生的了。
 
-所以在传统社会，人是不存在什么“独立”的问题，也不存在对“依赖”的大惊小怪。“相依为命”才是人类的常态。
-
-**“依赖”成为问题、“独立”成为倡导，这是现代社会特有的现象，既不普世、也不普遍。我们现在把“独立”看作一种美德，其实也是很有问题的。**
-
-所以，我先不回答你什么是“独立女性”。
-
-我们先来看看“独立女性”这个概念是怎么产生的、“女性的依赖”为什么成了亟待解决的问题、以及这对现代人来说到底是有怎样正面或是负面的意义？
-
----
-
-**开门见山的说，“独立型女性”（independent women）和“依赖型女性”（dependent women）是产业革命的发明。**
+**开门见山的说，“独立女性”是产业革命的发明。**
 
 这段历史我以前说过，简化版本是这样的：
 
-工业革命之前，大部分人类社会都是以农林牧渔为生。这种社会的一个特点就是**男性和女性所从事的劳动都直接与生计相关，所以叫做“生计活动”（subsistence activity）**。
+[工业革命](https://www.zhihu.com/search?q=%E5%B7%A5%E4%B8%9A%E9%9D%A9%E5%91%BD&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2275799698%7D)之前，大部分人类社会都是以农林牧渔为生。这种社会有一个特点，就是**男性和女性所从事的劳动都直接与生计相关，所以叫做“生计活动”（subsistence activity）**。
 
-男人从事渔猎种地；女人参与一部分采集和种地，大部分时间从事食物加工、纺织编织、生养子女等劳动。
+男人从事渔猎种地；女人从事食物加工、纺织编织、生养子女。
 
-这种劳动分工似乎对应着工业革命之后的“男主外女主内”，但实际上，二者性质完全不同。
+这种劳动分工乍看似乎对应着工业革命之后的“男主外女主内”，但实际上，二者性质完全不同。
 
-工业革命以前，所谓的“劳动分工”真的就只是分工的不同，不存在男性的工作更重要，女性的工作比较次要一说。
+传统社会的“劳动分工”真的就只是分工的不同，不存在男性的工作更重要，女性的工作比较次要一说。
 
-男性和女性的劳动同属于“生计活动”（subsistence activity），都直接为家庭生存和延续作贡献。女性的工作比男性的还更繁重一些，因为打猎和种地有季节性，然而食品加工、纺织和养育是全年无休。
+男性打到猎物重要，但不是每天都能打到，大部分时间还得靠女性的采摘。农业社会男女都会种地，同时女性还要食品加工、纺织和养育，而且全年无休，没有女人男性也过不下去。
 
 因为这个缘故，传统社会女性的价值和意义是被广泛认可的。一个家庭既需要男性的劳力，也需要女性的付出，这二者重量相当，不存在谁更需要谁、谁更依赖谁的问题。
 
-传统社会的女性不需要独立，不是因为她依赖男性，恰恰相反，是男性离不开女性独自生存，女性也需要男性共同生产，他们是互相需要的关系。这个时候，根本不存在“依赖”的问题，与之相对的“独立”自然也就没有产生的必要。
+那“独立女性”的概念是什么时候产生的？
 
-**那么女性是什么时候要从这段关系中独立出来的？是当相互依赖变成单方面的依赖，一方的生存单方面的受制于另一方的意志的时候。**
+**是当一方单方面受制于另一方，相互依赖变成单方面的依赖的时候。**
 
 工业革命就是这一改变的分水岭。
 
-工业革命以后，首先就是劳动不再直接和生计相关了。
+工业革命以后，劳动不再直接和生计挂钩了。**决定生计的是薪水**。
 
-劳动者必须先要获得雇主发放的薪水，用薪水购买生活物资，再通过女性的家务劳动来维持生计。
+而最初能打工挣钱的大部分是男性。虽然女性和以前一样从事家务劳动，但这部分劳动不计入薪酬，就无法和生计挂钩。当家务可以用金钱购买的时候，女性的地位就更加岌岌可危。
 
-**劳动和生计的脱节，这就直接剥夺了女性的生计手段。**
+女性需要“独立”，不是因为她们天性依赖、好吃懒做，而是因为她们若不如此，一旦遭到男性抛弃，就难以存活了。
 
-因为最初会有大量的女性不能和男性一样进入工厂，无法直接参与获得薪水的劳动。虽然女性和以前一样，从事着家务的劳动，但这些劳动在过去可以直接贡献生计，现在却无法带来薪酬，不能转化为生活资料，于是失去了作为生计手段的价值和地位。当家务劳动可以用金钱购买的时候，女性在家庭中的地位就更加岌岌可危了。
+所谓的“女性独立”，正是现代工业社会生计所迫、理性选择的结果。
 
-**这就是“家庭主妇”所滋生的土壤，也是“独立型女性”和“依赖型女性”所产生的历史背景。**
+其实男性的独立，又何尝不是生计所迫的结果？
 
-这一对概念的产生，就是因为一部分女性意识到她们虽然从事往日的劳动，却在实际上失去了生计手段。
+工业革命可不是自然而然吸引男性走进工厂的。它是通过剥夺生产资料，制造生存困境，迫使原本农耕渔猎的男人丢掉手中的锄具和渔具，不进入工厂就活不下去，男人们才如同羊羔一样被赶上了流水线。
 
-过去两个人互相扶持、彼此依赖，现在则是妻子单方面依赖丈夫，只有丈夫的劳动才能带来薪水，丈夫是breadwinner，妻子则是可有可无，毕竟面包房就可以买到现成的面包，家里这个人变得无足轻重。
+![](https://pic3.zhimg.com/50/v2-4059c53cefc7345533075ee2bbfb7d77_720w.jpg?source=1940ef5c)
 
-所谓的“依赖”，正是在这样的语境中才成为一个需要解决的问题。
+卓别林《摩登时代》工人和羊的隐喻
 
-但是你也看出来了吧？
+而这边女性的劳动失去了生计价值，陷入到无法独自生存的困境。为了活下去，她们必须要跻身职场，并要做得比男人更好。
 
-实际上并不存在女性突然变得依赖男人了起来，而是工业化的发展使得相当多的女性仅仅凭借过去的生产劳动无法再贡献家中的生计，甚至无法再养活自己了。
+**因此无论是对男性还是女性来说，现代性的“独立”都是失去了赖以生存的生计手段之后的权宜之计。它从一开始就蕴含着一个不祥的要素：恐惧**。
 
-她才需要另寻出路。
+这权宜之计的后果是什么呢？
 
-**而这个出路，就是“独立”。**
+后果就是现代人也并没有真的独立啊，我们甚至变得越来越依赖了不是吗？
 
-女性需要“独立”，不是因为她们善于依赖、好吃懒做，而是因为她们可以存活的空间被大大挤压了。
+连休息一下都需要请假，连病都病不起，连八小时睡眠都保证不了，连什么时候结婚、生子都难以自己说了算，这无论如何不能算“独立”啊。
 
-她的劳动不count，男性的劳动才count；她必须依赖男性的劳动才能存活，但男性此时却不再需要她的劳动也可以活得好好的。这造成的局面是什么呢？
+不仅如此，社会层面的割裂也不可避免。生计所迫的“独立”把人们变成竞争对手，男人与女人间的敌对、人与人之间的疏离、强势对弱势的抛弃、弱势对强势的憎恨、人类情感的异化……凡此种种，不一而足。
 
-**——就是男性可以不负任何代价的抛弃女性。男性的抛弃没有成本，而女性被抛弃的成本却极高。**
+这不是“独立”，这是“对立”。
 
-所以你在这种情况下，你要怎么做呢？
+所以，问题出在了哪？
 
-就是摆脱“依赖”，变得“独立”了。
+**问题就出在，现代人的“独立”是出于“恐惧”所做出的决定。**
 
-接下来，这便如同多米诺骨牌一样，催生了一系列的女权运动。
+**而“恐惧”总是，且必然的，导致“依赖”。**
 
-女性要争取工作机会、投票权利、同工同酬，为什么？无非是因为这些都是在这个现代社会活下去的必要手段。
+恐惧失去，就会依赖索取；恐惧疼痛，就会依赖[止疼片](https://www.zhihu.com/search?q=%E6%AD%A2%E7%96%BC%E7%89%87&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2275799698%7D)；恐惧悲伤，就会依赖麻醉；恐惧离别，就会依赖无数的承诺；恐惧死亡，就会依赖无休止的物质保障。
 
-当男性得益于工业革命早期对工厂劳力的需求时，女性则被挡在了门外。
+看似克服了对一种东西的依赖，实际上是换了去依赖另一样东西。频繁的改变依赖对象，如同上瘾的人频繁换药，换的是药，却不是依赖的习惯。换来换去上瘾的问题还是没有解决。
 
-**而男性并未因着这样的福利善待自己的妻子和家人，反而是利用特权抛妻弃子。当女性的生存空间被挤压尽致时，为了活下去，她们必须要“成为”男性，做男性做的事，享受男性享受的待遇。她们未必向往这样的生活，但她们别无选择。**
+被生计所逼出来的“独立”就是这样，到头来总会让人变成另一种形式的依赖，变成另一个主人的奴隶。
 
-这里面的社会机制相当复杂，有生产问题、有资本问题、有权力问题、有人的贪婪与自私、也有人为了活下去的生存博弈。
+**真正的独立，一定不能是迫于形势，生计所迫。**
 
-但不管怎样，在这不到两百年的时间中，“依赖”变成了问题，“独立”变成了生存手段。
+**你做出什么选择，不能是因为你害怕不这样做就活不下去，而是因为只有这样做你才满足、踏实、胸中那团火才不至让你辗转反侧、寝食难安。你才活得更有盼望和力量。**
 
----
+**真正的独立，总是出于爱。**
 
-那幸福呢？
+环境和他人可以剥夺你的生计手段，却不能夺去你心中所爱。
 
----
+一箪食，一瓢饮，人不堪其忧，你却乐在其中。
 
-现代社会经过女权的争取，理想情况下，女性确实可以做着和男性一样的工作，享受一样的待遇，单亲妈妈也可以不依赖男人和婚姻活下去了。
+你不需要用“独立”去逃脱什么、躲避什么、抵抗什么、防御什么。你是出于对自己的诚实、对所做事业的热爱、以及对未来的盼望所做出的决定。
 
-但我还是要问，那幸福呢？
+所以什么是独立？
 
-**“独立”，到底是一个权宜之计，还是真的能为我们带来幸福？**
-
-（待续）
-
-#未完待续TBC 
+**——富贵不能淫，贫贱不能移，威武不能屈，就是独立。**
