--- a/摘抄本/JH文章速读/摘抄 - 不紧张.md
+++ b/摘抄本/JH文章速读/摘抄 - 不紧张.md
@@ -1,13 +1,39 @@
 # 摘抄 - 不紧张
 
+紧张的根源是什么？
+
+是对“一个不慎会出现坏得无法承受的后果”的焦虑。
+
+那么解决紧张的方法自然也就在这句话里面。
+
+要么，你不要挑战你承受不起后果的事。
+
+要么你就减少“不慎”。一件事情做到了即使“不慎”都不会做坏的程度，你就不会紧张了——这其实是一个“练功夫”的话题。
+
+---
+
+**问题就在于有些事情由不得你选择，而这些事情不管你有没有功夫。**
+
 **紧张的根源，在于你相不相信不容你选择的事情里出现的意外，追根到底对你是一件好事。**
 
 世界上最不紧张的人，并不是功夫最好、选择余地最大的人。
 
 而是相信无论出现什么样的“意外”、“失误”，哪怕一时有各种痛苦和损失，但**兜兜转转最后结果一定是好的**的人。
 
----
-
 一个了解意外，相信意外，相信意外最终是站在自己一边的人，是真正对紧张免疫的人。
 
 你们要相信这句话——**任何不容你选择的意外，背后最终包含的是对你的好意。**
+
+出了意外，哪怕直接的当下你失败了，请你相信，这失败在最后好过成功。
+
+牢牢的相信这一点，这一点就会是事实。
+
+让失败被诅咒成为真正的失败的，恰恰是对此的不相信。
+
+因为不相信，你诅咒了意外。
+
+因为你诅咒了意外，你诅咒了你自己。
+
+**紧张就是这诅咒**。
+
+这诅咒其实是致命的——It costs you a life, the better life。
