--- a/John Hexa/专职主内.md
+++ b/John Hexa/专职主内.md
@@ -87,7 +87,7 @@ Tags: #第一性Feminism #亲密关系Intimate-Relationship
 
 一个能拥有称职的全职家庭主妇的家庭要远远强大过一个有双份收入但却没有有效家政管理的家庭。
 
-家庭（尤其是有发育我家族打算的家庭）的决策是不宜假手于雇员的。
+家庭（尤其是有发育家族打算的家庭）的决策是不宜假手于雇员的。
 
 雇员再忠诚、再能干，也不是（也不可以是）家庭的主人。这份职责事实上是不可以外包的。
 
