--- a/摘抄本/JH文章速读/摘抄 - 专职主内.md
+++ b/摘抄本/JH文章速读/摘抄 - 专职主内.md
@@ -1,6 +1,21 @@
 # 摘抄 - 专职主内
 
-**专业有效的家庭主妇远远要比“年薪百万的丈夫”稀缺得多**。
+一个能管理好一两百万现金和不动产、处理好所有社会关系、解决好子女教育、调理好家庭内环境的合格的专业人才，说句实话，无论其创造的价值还是其专业知识、人格强健的程度，都远非一般的公司中层白领所能比拟。
+
+能管理好现代中产家庭的“家庭主妇”，一点不夸张的说，放下婴儿车就能经营起一家业务相当健康的小企业。无论是专业技能还是心理素质都完全过关。
+
+前提是，这位家庭主妇要积极主动的、自觉的、进取的自我发展。
+
+这个世界上，**专业有效的家庭主妇远远要比“年薪百万的丈夫”稀缺得多**。
+
+---
+
+中文舆论场有一种普遍存在的堪称丧心病狂的防御性心态——生怕一件事被论证是合理的，因为一旦被论证为合理的，就会被自己列为“非做到不可的”。
+
+是什么造成了你会把一切“合理的”都自动视作“必须的”？
+
+**这种强迫性的逻辑跳跃是一种心灵创伤。**
+
 **基于“平均水平”，凡事皆不可做——因为那只是看似可完成整个动作，实际上亦无足够利润去对冲风险。**
 
 **一事可做，必有其“不平均”之处。**
@@ -8,3 +23,4 @@
 不要被“正常”捆住手脚，因为**正常人不幸福。**
 
 **幸福本身就是一种超常。**
+
